--- a/articles/rfi/999955.md
+++ b/articles/rfi/999955.md
@@ -1,5 +1,5 @@
-<!--1713363301000-->
-[中美防长难得对话 说了什么](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D-%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88)
+<!--1713366902000-->
+[北京称瑞士乌克兰和平会议条件尚不成熟](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F)
 ------
 
-<div>17/04/2024 - 15:43</div><img src="https://s.rfi.fr/media/display/acc7f874-a745-11ee-a27e-005056a97e36/w:1280/p:16x9/Dong%20Jun.JPG"><p><strong>美国和中国国防部长昨天稍晚实现一年半以来首次通话，这是两个超级大国在紧张对立局势依然严重的情况下仍希望保持对话的新迹象。但同时这次交流正值美国寻求加强与亚太地区其他国家的军事联盟以对抗中国日益增长的影响力之际。        </strong></p><div><p>据法新社今天报道称，华盛顿希望与北京保持开放的沟通渠道，以防止紧张局势升级。五角大楼报告，美国国防部长奥斯汀和中国国防部长董军通过视频会议通话。</p><p>据美国五角大楼发言人帕特·莱德在公告中说：两位官员讨论了美国和中华人民共和国之间的防务关系以及地区和全球安全问题。奥斯汀强调了两国之间继续开放军事通讯线的重要性，他并重申美国将继续在国际法允许的任何地方安全、负责任地飞行、航行和行动。”</p><p>根据中国国防部的一份新闻稿，中国国防部长董军呼吁中美两国之间应加强信任。</p><p>他强调，中美必须以和平为最宝贵、以稳定为最重要。 而军事部门对稳定双边关系发展和防止重大危机至关重要。</p><p>据法新社，董军重申中国对台湾的立场。 中国将台湾视为自己的省份之一，自 1949 年中国内战结束以来，中国尚未成功将台湾与其他领土统一。</p><p>中国官方透露的董军讲话称，“台湾问题事关中国的核心利益，中国的核心利益决不能受到损害。”</p><p>中国国防部长还呼吁美国尊重中国在南海的主权主张。</p><p>法新社称，北京声称对南海的大部分海域，岛屿和礁石拥有主权，而且最近与菲律宾的紧张局势加剧。</p><p>董军强调，“美国必须承认中国的坚定立场”并“采取具体措施维护地区和平”。</p><p>这次交流是在美国、菲律宾和日本领导人在华盛顿举行史无前例的峰会之后不到一周进行的，峰会期间美国菲律宾和日本特别谴责了北京在这一战略海域的“危险和侵略性”行为。</p><p>在明显针对北京的警告中，美国总统拜登承诺在发生被袭击时美国会保卫菲律宾。</p><p>拜登和习近平去年 11 月在加利福尼亚州会晤期间商定的两国军事安全对话最近恢复，并于 4 月初在夏威夷举行了美国和中国军事代表的工作会议。</p><p>但这位五角大楼负责人与中国国防部长的最后一次重要交流可以追溯到 2022 年 11 月，当时他在柬埔寨会见了时任国防部长魏凤和。</p><p>而时任众议院民主党领袖佩洛西 (Nancy Pelosi) 2022 年访问台湾后，北京决定中断与华盛顿的高层军事讨论。</p><p>2023 年初，中国和美国经历了一段高度紧张的时期，这与中国气球飞越美国领土有关。</p><p>尽管局势有所缓和，但无论是技术竞争还是台湾问题，紧张局势仍然很高。</p><p>在美国和中国领导人于11月就恢复军事讨论达成一致之前，美国国防部长曾警告称，如果两国军队之间缺乏沟通，可能会导致擦枪走火事故恶化。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWd8.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E7%25BE%258E%25E9%2598%25B2%25E9%2595%25BF%25E9%259A%25BE%25E5%25BE%2597%25E5%25AF%25B9%25E8%25AF%259D-%25E8%25AF%25B4%25E4%25BA%2586%25E4%25BB%2580%25E4%25B9%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88%20-%20https%3A%2F%2Frfi.my%2FAWd8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88%20-%20https%3A%2F%2Frfi.my%2FAWd8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWd8.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 14:16</div><img src="https://s.rfi.fr/media/display/37df5d2e-fca2-11ee-9c32-005056bf30b7/w:1280/p:16x9/2024-04-17T092616Z_1357906527_RC2987AJQIZX_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>瑞士上周宣布，希望于 6 月 15 日至 16 日举行乌克兰和平会议。但俄罗斯宣布不不出席，并称没有俄罗斯的参与，这个会议不会有意义。中国是否支持该会议引发关注。        </strong></p><div><p>据法新社说，在德国总理朔尔茨发表评论肯定北京方面似乎支持该会议。近日访问中国的德国总理朔尔茨周二在与中国国家主席习近平会晤期间表示，柏林和北京希望“就推动在瑞士举办高级别会议进行深入、积极的磋商”。</p><p>周三，当被问及北京是否会推动莫斯科参加此次会议时，中国外交部发言人林剑对德国总理的言论进行了限定。据林剑说，“据我所知，这次和平会议仍在准备中，还有很多工作要做。”</p><p>林剑中国外交部例行新闻发布会上称，习近平在会见朔尔茨时表示，中国“支持及时召开俄罗斯和乌克兰承认的、各方平等参与、公平讨论一切和平方案的国际和平会议”。</p><p>法新社指有评论认为，在目前的情况下，中方并不支持在瑞士举行这次会议，俄罗斯也不参加。</p><p>在瑞士宣布组织这次会议后，莫斯科认为在俄罗斯缺席的情况下举行乌克兰问题谈判“没有意义”。</p><p>在乌克兰危机上，中国呼吁对话，反对使用核武器，并敦促尊重“所有国家”的领土完整，这意味着乌克兰也包括在内。</p><p>但北京从未公开谴责莫斯科入侵乌克兰，并经常呼吁考虑俄罗斯对北约的安全担忧。十多年来，中国和俄罗斯的关系日益密切，因为两国在国际舞台上共同谴责西方霸权。</p><p>自乌克兰入侵以来，中俄两国加强了经济、军事和外交合作。</p><p>据中国官方新华社说，习近平周二向朔尔茨提出了防止乌克兰危机“失控”的“四项原则”。据习近平表示，“我们要以维护和平稳定为中心，不要自私地利用局势”。</p><p>中国还呼吁“不要火上浇油”。法新社说，这可以理解为中国暗批美国人和欧洲人向基辅运送武器。</p><p>中国国家主席还呼吁，“我们必须创造恢复和平所需的条件”并“减少对世界经济的影响”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbn.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E5%258C%2597%25E4%25BA%25AC%25E7%25A7%25B0%25E7%2591%259E%25E5%25A3%25AB%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E5%2592%258C%25E5%25B9%25B3%25E4%25BC%259A%25E8%25AE%25AE%25E6%259D%25A1%25E4%25BB%25B6%25E5%25B0%259A%25E4%25B8%258D%25E6%2588%2590%25E7%2586%259F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F%20-%20https%3A%2F%2Frfi.my%2FAWbn.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F%20-%20https%3A%2F%2Frfi.my%2FAWbn.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbn.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
