--- a/articles/rfi/999958.md
+++ b/articles/rfi/999958.md
@@ -1,5 +1,5 @@
-<!--1713356104000-->
-[中国田协出面说要调查半程马拉松作弊指控案](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88)
+<!--1713363302000-->
+[以色列罕派议会代表团访问台湾 称台以面临艰困国际处境 国家小却很强](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240417-%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE-%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83-%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA)
 ------
 
-<div>17/04/2024 - 11:21</div><img src="https://s.rfi.fr/media/display/8014ac0e-dc57-11ee-b9f1-005056bf30b7/w:1280/p:16x9/AP23200244616280.jpg"><p><strong>刚刚过去的周日北京半程马拉松的视频显示，三名来自非洲国家的选手似乎放慢速度，以便中国选手何杰超过他们并获胜。中国田径协会誓言加强对路跑赛事的调查与监管。        </strong></p><div><p>中国选手何杰报告以 1 小时 03 分 44 秒的成绩获胜，他领先埃塞俄比亚选手德杰内·海鲁·比基拉 (Dejene Hailu Bikila) 和肯尼亚选手罗伯特·凯特 (Robert Keter) 和威利·姆南加特 (Willy Mnangat)，这3个人均获得并列第二名。</p><p>据网上分享的视频显示，三名领先的跑步者向还稍稍落后的何杰挥手，示意终点线。最终四个人一起跑完了整个比赛，总里程刚刚超过 13 英里。</p><p>肯尼亚选手姆南加特告诉英国广播公司，他们三人只是作为起跑者参加比赛，并不计成绩。然而，按照惯例，他们的参赛号码布并没有表明他们是起跑后跑跑而已。</p><p>北京市体育主管部门北京市体育局表示，正在对该事件进行调查，调查结果将在稍后公布。该机构还说，“总体来看，路跑赛事整体运行平稳，但赛事组织管理方面的问题也暴露出来，引起了广泛关注。”</p><p>据路透社说，长跑在中国越来越受欢迎，但比赛却有作弊和组织不善的历史。比如，2018年深圳半程马拉松赛中，有258名参赛者被证实作弊。 2010年，中国山东女子半程马拉松冠军因被发现由他人代跑而被剥夺了冠军头衔。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E5%259B%25BD%25E7%2594%25B0%25E5%258D%258F%25E5%2587%25BA%25E9%259D%25A2%25E8%25AF%25B4%25E8%25A6%2581%25E8%25B0%2583%25E6%259F%25A5%25E5%258D%258A%25E7%25A8%258B%25E9%25A9%25AC%25E6%258B%2589%25E6%259D%25BE%25E4%25BD%259C%25E5%25BC%258A%25E6%258C%2587%25E6%258E%25A7%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 14:52</div><img src="https://s.rfi.fr/media/display/1a830ca0-ac73-11ee-bb7f-005056bf30b7/w:1280/p:16x9/AP23362427534236.jpg"><p><strong>台湾立法院长韩国瑜今（17）日在立法院接见“以色列国会议员访问团”以色列国会友台小组主席杜伯斯基（Boaz Toporovsky）议员一行。        </strong></p><div><p>据自由时报今天报道称，台湾立法院长韩国瑜今日会见来访的“以色列国会议员访问团”时表示，台湾与以色列互设代表处迄已逾31年，双方互动都是基于宏观的视野，在学术、科技、能源、农业等领域的交流尤为热络，盼在共同努力下，未来双方交流合作更加深化广化，互蒙其利。韩国瑜并说，台以两国同样缺乏天然资源匮乏、仰赖专业人才，且都面临外在强敌的威胁，但共享重视家庭与教育等传统文化及民主、法治等普世价值，是以双方的合作更显得重要。</p><p>“以色列国会友台小组”主席杜伯斯基议员致词时首先感谢台湾对以色列的坚定支持，他提及以色列目前仍处于战争状态，以色列对抗的是恐怖主义，尤其以国在去年10月遭受哈马斯恐怖攻击、今年4月14日遭受伊朗突袭攻击时，台湾都在第一时间发挥道德勇气，表达关切与支持，使该国政府及人民均深刻感受到台以间深厚的友谊。</p><p>杜伯斯基主席续表示，台湾与以色列都是蕞尔小国，同面临着非常艰困的国际处境，然而国家虽小却很强盛，两国除在科技与其他领域发展都很先进外，更有着共享的价值与信念，两国的共同使命是一起深化双边合作交流，为下一代创造更美好的未来。</p><p>以色列毕兹穆思（Boaz Bismuth）议员表示，台以两国是共享普世价值的民主伙伴，他特别感谢台湾政府及立法部门在以色列遭受外来恐怖攻击时，总是于第一时间发布声明表达支持，两国间的真挚友谊令人感动。另他对台湾国会三党不过半的多元政治环境表达崇高的敬意与羡慕，因为以色列国会席次系由13个不同政党组成，期许未来持续深化国会交流及友好情谊。</p><p>据该报道，韩国瑜接着代表立法院对以色列近日再度遭受外来攻击表达慰问，并盼受难者能够安息，伤者能够尽速痊愈，流离失所者能够重建家园，更希望早日恢复和平。韩国瑜另表示，未来以色列若欲透过在台新建犹太教堂来促进双边交流，立法院乐愿提供必要的协助。</p><p>台湾立法院副院长江启臣则表示，近年以色列陆续与韩国、越南等东亚国家签订双边自由贸易协定，以色列在国际社会中也参与了许多重要的功能性组织，盼未来也能支持台湾参与国际社群，并与台湾携手共创更多的发展与繁荣。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcE.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240417-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E7%25BD%2595%25E6%25B4%25BE%25E8%25AE%25AE%25E4%25BC%259A%25E4%25BB%25A3%25E8%25A1%25A8%25E5%259B%25A2%25E8%25AE%25BF%25E9%2597%25AE%25E5%258F%25B0%25E6%25B9%25BE-%25E7%25A7%25B0%25E5%258F%25B0%25E4%25BB%25A5%25E9%259D%25A2%25E4%25B8%25B4%25E8%2589%25B0%25E5%259B%25B0%25E5%259B%25BD%25E9%2599%2585%25E5%25A4%2584%25E5%25A2%2583-%25E5%259B%25BD%25E5%25AE%25B6%25E5%25B0%258F%25E5%258D%25B4%25E5%25BE%2588%25E5%25BC%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE%20%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83%20%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAWcE.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE%20%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83%20%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAWcE.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcE.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE%20%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83%20%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
