--- a/articles/rfi/999959.md
+++ b/articles/rfi/999959.md
@@ -1,5 +1,5 @@
-<!--1713356102000-->
-[视频 伊朗袭击以色列后 欧盟峰会讨论延长制裁伊朗](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%A7%86%E9%A2%91-%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E-%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97)
+<!--1713363302000-->
+[美国对中国造船业发起301调查 戴琪：保证进行全面彻底调查](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20240417-%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5-%E6%88%B4%E7%90%AA-%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5)
 ------
 
-<div>17/04/2024 - 13:25</div><img src="https://s.rfi.fr/media/display/7080199c-e6e1-11ee-bb42-005056a97e36/w:1280/p:16x9/AP24080521474896.jpg"><p><strong>欧盟首脑在布鲁塞尔举行会议，中东局势的危险升级是本次欧洲首脑会议的重要议题。欧盟可能跟随美国宣布对伊朗延长制裁措施，详情请见France24台记者 艾利克斯-勒布尔东（Alix Le Bourdon） 报道。        </strong></p><div><p>欧盟首脑今明两天在布鲁塞尔举行27个成员国峰会，中东局势的危险升级是本次欧洲首脑会议的重要议题，根据最新草案，欧盟可能跟随美国宣布对伊朗延长制裁措施，</p><p>France24台记者 艾利克斯-勒布尔东（Alix Le Bourdon） 从布鲁塞尔发出的报道指出，自从伊朗袭击以色列以来，西方外交一直处于紧急状态，欧盟27过呼吁以色列保持克制以避免冲突。</p><p>美国曾多次表示不想参与以色列可能做出的任何反应，并选择加强对伊斯兰政权的制裁。</p><p>随后欧盟27 国也想加强对伊朗的制裁，主要针对伊朗的武器库。</p><p>虽然此前本次欧盟首脑27国峰会原本打算完全讨论经济问题，但这些问题在很大程度上将由于国际局势严峻而被忽略。</p><p>本次欧盟首脑峰会首先关注伊朗问题和伊朗袭击以色列的后果，</p><p>从所能看到的最新结论草案显示27国呼吁各方保持最大限度的克制，并将讨论扩大已经实施的针对伊朗的制裁措施 。</p><p>欧盟从 2023 年 7 月对伊朗采取了一系列限制措施 ，主要是因为伊朗在乌克兰战争中支持俄罗斯 ，因此欧盟禁止向伊朗出口所需的生产无人机某些部件。</p><p>欧盟的想法是将这些限制扩大到其他类型的武器如导弹，这一提议得到了法国和德国的支持，而且希望将这些限制扩大到德黑兰在中东的盟友如黎巴嫩真主党。</p><p>分析指出不过目前这些制裁很可能在很大程度上仍是象征性，主要因为伊朗是逃避西方制裁的高手。</p><p>在本次为期两天的欧盟峰会期间，27 国还讨论加沙人民的处境并呼吁立即无条件停火进行人道救援。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWat.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25A7%2586%25E9%25A2%2591-%25E4%25BC%258A%25E6%259C%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2590%258E-%25E6%25AC%25A7%25E7%259B%259F%25E5%25B3%25B0%25E4%25BC%259A%25E8%25AE%25A8%25E8%25AE%25BA%25E5%25BB%25B6%25E9%2595%25BF%25E5%2588%25B6%25E8%25A3%2581%25E4%25BC%258A%25E6%259C%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWat.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWat.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWat.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 14:15</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪4月17日宣布，在对五个全国性工会向美国贸易代表办公室（USTR）提交的请愿书进行审查后，该部门“正在发起对中华人民共和国（PRC）针对海运、物流和造船行业的支配性行为、政策和做法展开调查”。        </strong></p><div><p>戴琪通过美国贸易代表办公室的新闻稿表示：“这些请愿书提出了严重而令人担忧的指控，称中华人民共和国长期以来一直试图主导海运、物流和造船行业，并列举了中华人民共和国为实现这些目标而使用的不公平、非市场政策和做法。这些指控反映了我们在其他行业已经看到的情况，即中华人民共和国利用广泛的非市场政策和做法来破坏公平竞争，并在中国和全球范围内主导市场”。</p><p>戴琪指出，“我保证对这些工会关注的问题进行全面彻底的调查”。3月12日，美国钢铁工人联合会（USW）等五大工会组织提出请愿，正式要求拜登政府对中国在海事、物流和造船业的“不合理和歧视性”做法展开贸易调查。</p><p>据悉，在考虑请愿书并根据301条款委员会的建议后，美国贸易代表办公室已启动调查。美国贸易代表必须寻求与其行为、政策或做法受到调查的外国政府进行磋商。美国贸易代表办公室已要求就调查与中方进行磋商。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BB%258F%25E8%25B4%25B8%2F20240417-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E9%2580%25A0%25E8%2588%25B9%25E4%25B8%259A%25E5%258F%2591%25E8%25B5%25B7301%25E8%25B0%2583%25E6%259F%25A5-%25E6%2588%25B4%25E7%2590%25AA-%25E4%25BF%259D%25E8%25AF%2581%25E8%25BF%259B%25E8%25A1%258C%25E5%2585%25A8%25E9%259D%25A2%25E5%25BD%25BB%25E5%25BA%2595%25E8%25B0%2583%25E6%259F%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5%20-%20https%3A%2F%2Frfi.my%2FAWbl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5%20-%20https%3A%2F%2Frfi.my%2FAWbl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
