--- a/articles/rfi/999960.md
+++ b/articles/rfi/999960.md
@@ -1,5 +1,5 @@
-<!--1713356102000-->
-[德国突袭抓人口走私团伙 逮10人 多有中国人涉案](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E5%BE%B7%E5%9B%BD%E7%AA%81%E8%A2%AD%E6%8A%93%E4%BA%BA%E5%8F%A3%E8%B5%B0%E7%A7%81%E5%9B%A2%E4%BC%99-%E9%80%AE10%E4%BA%BA-%E5%A4%9A%E6%9C%89%E4%B8%AD%E5%9B%BD%E4%BA%BA%E6%B6%89%E6%A1%88)
+<!--1713363302000-->
+[法国大办诺曼底登陆80周年庆祝活动 但不邀请普京](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8-%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC)
 ------
 
-<div>17/04/2024 - 12:04</div><img src="https://s.rfi.fr/media/display/2e3bc838-b6df-11ee-b345-005056a97e36/w:1280/p:16x9/AP24019459879494.jpg"><p><strong>据德国警方今天在一份公告中表示，德国当局今天早些时候对一个国际人口走私团伙进行了大规模突袭。1000多名警察搜查了德国西部和南部的数十所住宅、商店和办公室，逮捕了10名嫌疑人，其中包括两名律师。涉案达数百中国人也遭问讯。        </strong></p><div><p>据美联社今天报道称，德国针对利用签证许可的人口走私团伙今天进行大规模突袭，并称逮捕10人。</p><p>犯罪嫌疑人被指控非法利用德国专门针对技术外国工人的特殊移民规定，为大约 350 名不符合所需标准的中国公民获取居留许可，以换取数十万欧元非法获利。 </p><p>据德国《图片报》报道，移民局的几名员工在该骗局中受到贿赂。</p><p>警方在北莱茵-威斯特法伦州、石勒苏益格-荷尔斯泰因州、黑森州、莱茵兰-普法尔茨州、巴登-符腾堡州、巴伐利亚州、汉堡和柏林进行了突击搜查，扣押了资产并收集了证据。</p><p>德国内政部长南希·费瑟感谢警方和检察官“大规模打击国际有组织移民偷运”。内政部长称，“在打击走私团伙的过程中，我们正是需要这种高水平的有力调查和持续的打击力度，”该部长坚称， “我们将继续采取严厉措施打击有组织的移民偷运。”</p><p>调查重点是北莱茵-威斯特法伦州，10 名嫌疑人目前被拘留在那里。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZX.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E5%25BE%25B7%25E5%259B%25BD%25E7%25AA%2581%25E8%25A2%25AD%25E6%258A%2593%25E4%25BA%25BA%25E5%258F%25A3%25E8%25B5%25B0%25E7%25A7%2581%25E5%259B%25A2%25E4%25BC%2599-%25E9%2580%25AE10%25E4%25BA%25BA-%25E5%25A4%259A%25E6%259C%2589%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BA%25BA%25E6%25B6%2589%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E5%9B%BD%E7%AA%81%E8%A2%AD%E6%8A%93%E4%BA%BA%E5%8F%A3%E8%B5%B0%E7%A7%81%E5%9B%A2%E4%BC%99%20%E9%80%AE10%E4%BA%BA%20%E5%A4%9A%E6%9C%89%E4%B8%AD%E5%9B%BD%E4%BA%BA%E6%B6%89%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWZX.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E5%9B%BD%E7%AA%81%E8%A2%AD%E6%8A%93%E4%BA%BA%E5%8F%A3%E8%B5%B0%E7%A7%81%E5%9B%A2%E4%BC%99%20%E9%80%AE10%E4%BA%BA%20%E5%A4%9A%E6%9C%89%E4%B8%AD%E5%9B%BD%E4%BA%BA%E6%B6%89%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWZX.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZX.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E5%9B%BD%E7%AA%81%E8%A2%AD%E6%8A%93%E4%BA%BA%E5%8F%A3%E8%B5%B0%E7%A7%81%E5%9B%A2%E4%BC%99%20%E9%80%AE10%E4%BA%BA%20%E5%A4%9A%E6%9C%89%E4%B8%AD%E5%9B%BD%E4%BA%BA%E6%B6%89%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 13:45</div><img src="https://s.rfi.fr/media/display/b95f53c6-e57b-11ec-9266-005056bf30b7/w:1280/p:16x9/AFP_000_WAS2004050505268_DDay_Omaha_Beach_1944.jpg"><p><strong>俄罗斯将受邀参加6月初举行的盟军在法国诺曼底登陆80周年庆祝活动，但由于俄罗斯对乌克兰侵略战争，俄罗斯总统普京没有被邀参加仪式。        </strong></p><div><p>据这次纪念活动的组织者报告，“鉴于目前俄罗斯在乌克兰的侵略战争，普京将不会被邀请参加诺曼底登陆的纪念活动。”</p><p>该组织者称，“然而，俄罗斯将被邀请出席，以便苏联人民的承诺和牺牲，以及他们对 1945 年胜利的贡献应当得到尊重。”</p><p>诺曼底登陆纪念仪式组织者没有详细说明俄罗斯可以以何种级别的代表参加在法国西北部诺曼底举行的纪念活动。</p><p>2014 年 6 月，尽管克里米亚被俄罗斯兼并，因俄罗斯总统普京仍受邀参加当年的 70 周年庆祝活动。</p><p>随后，俄罗斯总统普京和乌克兰总统波罗申科在乌克兰东部发生亲俄叛乱军事冲突期间首次对话，西方指责莫斯科煽动甚至直接策划了这场叛乱。促进这次对话有法国总统奥朗德和德国总理默克尔的斡旋，随后上述这四个国家建立“诺曼底”形式进行谈判，以寻求乌克兰危机的解决方案。危机持续，直至2022年2月俄罗斯入侵乌克兰至今。</p><p>但普京曾经没有被邀请参加2019年“诺曼底登陆”（D-Day）75周年纪念活动，当时乌克兰东部局势已经陷入困境。</p><p>普京称不被邀请“绝对不是一个问题”。 莫斯科称不要夸大盟军登陆的重要性，坚持二战中有 2700 万苏联人死亡。</p><p>组织纪念盟军登陆活动的“解放使命”组织解释：“从历史上看，法国一直邀请当年有士兵在诺曼底登陆的国家参加这一仪式。俄罗斯联邦也被邀请过参加仪式。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25B3%2595%25E5%259B%25BD%25E5%25A4%25A7%25E5%258A%259E%25E8%25AF%25BA%25E6%259B%25BC%25E5%25BA%2595%25E7%2599%25BB%25E9%2599%258680%25E5%2591%25A8%25E5%25B9%25B4%25E5%25BA%2586%25E7%25A5%259D%25E6%25B4%25BB%25E5%258A%25A8-%25E4%25BD%2586%25E4%25B8%258D%25E9%2582%2580%25E8%25AF%25B7%25E6%2599%25AE%25E4%25BA%25AC&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC%20-%20https%3A%2F%2Frfi.my%2FAWbA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC%20-%20https%3A%2F%2Frfi.my%2FAWbA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
