--- a/articles/rfi/999961.md
+++ b/articles/rfi/999961.md
@@ -1,5 +1,5 @@
-<!--1713350701000-->
-[俄罗斯秘密外交政策文件敦促尽力削弱美国](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E4%BF%84%E7%BD%97%E6%96%AF%E7%A7%98%E5%AF%86%E5%A4%96%E4%BA%A4%E6%94%BF%E7%AD%96%E6%96%87%E4%BB%B6%E6%95%A6%E4%BF%83%E5%B0%BD%E5%8A%9B%E5%89%8A%E5%BC%B1%E7%BE%8E%E5%9B%BD)
+<!--1713363301000-->
+[日本首度出动两艘“准航舰”远征印太 或向中国秀肌肉](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98-%E5%87%86%E8%88%AA%E8%88%B0-%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA-%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89)
 ------
 
-<div>17/04/2024 - 12:22</div><img src="https://s.rfi.fr/media/display/4b46001a-8dcd-11ed-aa6f-005056bfb2b6/w:1280/p:16x9/AP22264658548390-New-York-statue-de-la-libert%C3%A9.jpg"><p><strong>根据俄罗斯外交部的一份秘密文件，俄罗斯外交部一直在制定计划，试图削弱包括美国在内的西方对手，并利用乌克兰战争建立一个不受俄罗斯接受的美国主导地位的全球秩序。俄罗斯还寻求重塑地缘政治，拉近与中国、伊朗和朝鲜的距离，试图改变当前的力量平衡。        </strong></p><div><p>据华盛顿邮报今天报道称，在俄罗斯官方和公开的《俄罗斯联邦外交政策构想》的一份机密附录中，俄罗斯外交部呼吁针对以美国为首的“不友好国家联盟”开展“进攻性信息攻势”以及涵盖“军事政治、经济贸易和信息心理领域”的其他措施。</p><p>由欧洲情报机构向《华盛顿邮报》提供的2023 年俄罗斯文件指出，“我们需要继续调整我们处理与不友好国家关系的方式” 。 “重要的是建立一个机制来寻找西方外部和内部政策的薄弱环节，目的是制定切实可行的步骤来削弱俄罗斯的对手。”</p><p>该文件首次对莫斯科精英中许多人所说的这场针对西方的混合战争进行了官方确认和编纂。据《华盛顿邮报》此前报道的克里姆林宫文件称，俄罗斯正寻求通过支持孤立主义和极端主义政策的宣传活动，颠覆西方对乌克兰的支持，扰乱美国和欧洲国家的国内政治。它还寻求重塑地缘政治，拉近与中国、伊朗和朝鲜的距离，试图改变当前的力量平衡。</p><p>这份日期为 2023 年 4 月 11 日的秘密附录使用了比公共外交政策文件更加强硬和直率的语言，声称美国正在领导一个“不友好国家”联盟，旨在削弱俄罗斯，并指控莫斯科“对西方全球构成霸权威胁”。”该文件称，俄罗斯乌克兰战争的结果将“在很大程度上决定未来世界秩序的轮廓”，这清楚地表明莫斯科认为俄罗斯入侵的结果与俄罗斯能力以及其他独裁国家的能力密不可分。 俄罗斯旨在将莫斯科意志强加于全球。</p><p>2023年3月31日公布并经俄罗斯总统普京批准的《俄罗斯联邦外交政策构想》 使用平淡的外交语言呼吁“国际关系民主化”、“主权平等”和加强俄罗斯的地位在全球舞台上。俄罗斯外交政策概念还指责美国及其“卫星国”利用乌克兰冲突升级“多年来的反俄政策”。</p><p>公开文件称，俄罗斯希望西方“认识到西方对抗政策和霸权野心没有任何未来，并应接受多极世界的复杂现实”。</p><p>俄罗斯外交部在一份声明中表示，它不会对“内政文件是否存在”以及这些文件的工作进展发表评论。该部补充说：“正如我们在不同层面多次表示的那样，我们可以确认，我们的情绪是果断打击西方集体采取的侵略步骤，这是针对俄罗斯发动的混合战争的一部分。”</p><p>俄罗斯一位领导人表示，俄罗斯最近否决了联合国延长对朝鲜核武器和弹道导弹计划制裁的监督，有效结束了14年的合作，这是“一个明确的迹象”，表明机密附录中设想的工作已经在进行中。与俄罗斯高级外交官关系密切的学者匿名表示：“俄罗斯可以在世界许多不同地区给美国制造困难。” “这涉及中东、东北亚、非洲大陆甚至拉丁美洲。”</p><p>外交政策概念和机密附录的制定是在向俄罗斯学者征求政策建议之后制定的。</p><p>学者弗拉基米尔·扎里欣 (Vladimir Zharikhin) 呼吁俄罗斯“继续为美国孤立主义右翼势力上台提供便利”，“导致拉丁美洲国家的不稳定以及极左和极右翼极端主义势力的崛起”。就在那里”，以及“通过支持对美国经济压力不满的政党来恢复欧洲国家的主权”</p><p>该政策提案中的其他要点（也已提供给《华盛顿邮报》）表明，莫斯科煽动美国和中国在台湾问题上的冲突，以拉近俄罗斯和中国的距离，并“使以色列周围的中东局势升级” 、伊朗和叙利亚，用该地区的问题来分散美国的注意力。”</p><p>西方官员警告说，俄罗斯在过去两年中不断升级其宣传和影响力活动，试图削弱对乌克兰的支持。作为其中的一部分，它试图制造新的全球鸿沟，俄罗斯针对西方的宣传努力在中东、非洲、拉丁美洲和亚洲的许多国家引起共鸣。</p><p>据华盛顿邮报，长期批评普京的米哈伊尔·霍多尔科夫斯基曾是俄罗斯首富，直到与克里姆林宫的冲突导致他入狱 10 年。对于米哈伊尔·霍多尔科夫斯基来说，俄罗斯千方百计削弱美国并不奇怪。 “对于普京来说，他应该试图给美国制造尽可能多的问题，这是绝对自然的，”他说， “目的是让美国退出国际舞台，然后摧毁北约。这并不意味着要解散它，而是要让人们感觉北约没有保护他们。”</p><p>他说，国会在向乌克兰提供更多武器问题上的长期僵局只会让俄罗斯更容易挑战华盛顿的全球实力。而乌克兰的失败“意味着许多人将不再担心挑战美国”，而美国的成本只会增加。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZq.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E7%25A7%2598%25E5%25AF%2586%25E5%25A4%2596%25E4%25BA%25A4%25E6%2594%25BF%25E7%25AD%2596%25E6%2596%2587%25E4%25BB%25B6%25E6%2595%25A6%25E4%25BF%2583%25E5%25B0%25BD%25E5%258A%259B%25E5%2589%258A%25E5%25BC%25B1%25E7%25BE%258E%25E5%259B%25BD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BF%84%E7%BD%97%E6%96%AF%E7%A7%98%E5%AF%86%E5%A4%96%E4%BA%A4%E6%94%BF%E7%AD%96%E6%96%87%E4%BB%B6%E6%95%A6%E4%BF%83%E5%B0%BD%E5%8A%9B%E5%89%8A%E5%BC%B1%E7%BE%8E%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWZq.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BF%84%E7%BD%97%E6%96%AF%E7%A7%98%E5%AF%86%E5%A4%96%E4%BA%A4%E6%94%BF%E7%AD%96%E6%96%87%E4%BB%B6%E6%95%A6%E4%BF%83%E5%B0%BD%E5%8A%9B%E5%89%8A%E5%BC%B1%E7%BE%8E%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWZq.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZq.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BF%84%E7%BD%97%E6%96%AF%E7%A7%98%E5%AF%86%E5%A4%96%E4%BA%A4%E6%94%BF%E7%AD%96%E6%96%87%E4%BB%B6%E6%95%A6%E4%BF%83%E5%B0%BD%E5%8A%9B%E5%89%8A%E5%BC%B1%E7%BE%8E%E5%9B%BD&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:51</div><img src="https://s.rfi.fr/media/display/a2524902-132f-11ea-a55b-005056a99247/w:1280/p:16x9/000_hkg10167682_0.jpg"><p><strong>日本海上自卫队17日宣布，出云号（JS Izumo DDH-183）和加贺号（JS Kaga DDH-184）两艘出云级直升机护卫舰将在5月3日启航，率领6艘水面舰艇、2架P-1海上巡逻机和数艘潜舰分4个战斗编队，展开为期7个月的“2024年印太远征”（IPD24），这是日本海自有史以来规模最大的单次远征部署。        </strong></p><div><p>据自由时报引述美国海军研究协会新闻（USNI News）17日消息，IPD24行动旨在实现“自由开放的印太地区”，突显了日本对区域安全的关切，以及与盟友合作的决心。出云级护卫舰的参与彰显了日本在印太地区的存在和影响力，以及其积极参与维护区域安全的承诺。</p><p>这次远征是日本首次同步部署两艘出云级护卫舰，反映日本意图加强在区域内的存在感。其中，加贺号已于3月完成首阶段改装，能够在甲板上起降F-35B战机，这将大幅提升日本的攻击及防御能力，出云号预计稍后进行类似改装。</p><p>远征期间，日本舰队将分赴澳洲、斐济、法属玻里尼西亚、印度、基里巴斯、帕劳、巴布亚新几内亚、菲律宾、马绍尔群岛、密克罗尼西亚、东加、美国和万纳杜等地，参与包括“马拉拉”（Marara ）、“环太平洋”（RIMPAC）、“太平洋之龙”（Pacific Dragon）、“太平洋先锋”（Pacific Vanguard）、“卡卡杜”（ Kakadu）、“太平洋伙伴”（Pacific Partnership）以及“马拉巴尔”（Malabar）等一系列联合演习，目标是增进与区内盟友的联合作战能力。</p><p>该报道称，与此同时，加拿大14日启动代号“地平线行动”（Operation Horizon）的印太任务，派遣护卫舰蒙特娄号 （HMCS Montreal FFH336） 执行为期6个月的任务；美国罗斯福号航空母舰打击群 （Theodore Roosevelt CSG）结束与韩国及日本海卫在东海的联合演习后，又于11日12日周六期间，与日本海自舰艇在东海南部进行双边演习。</p><p>自由时报称，另据德国军方透露，美海军卡尔文森号（USS Carl Vinson CVN-70）航舰打打击群将参加今夏在夏威夷附近举行的“环太平洋”演习，德国也将出动3架战机和1架运输机与之合作，舰载机将演练保护航舰免受敌机威胁，并模拟对敌军雷达阵地实施打击行动。</p><p>消息引述军事专家分析，日本此次大规模远征部署，旨在向国际社会传达维护自由开放航行的决心，并透过与美德等盟友的联合演训，增强共同威慑和因应区域安全威胁的能力，反制中俄在印太地区日益扩张的影响力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWdN.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E6%2597%25A5%25E6%259C%25AC%25E9%25A6%2596%25E5%25BA%25A6%25E5%2587%25BA%25E5%258A%25A8%25E4%25B8%25A4%25E8%2589%2598-%25E5%2587%2586%25E8%2588%25AA%25E8%2588%25B0-%25E8%25BF%259C%25E5%25BE%2581%25E5%258D%25B0%25E5%25A4%25AA-%25E6%2588%2596%25E5%2590%2591%25E4%25B8%25AD%25E5%259B%25BD%25E7%25A7%2580%25E8%2582%258C%25E8%2582%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89%20-%20https%3A%2F%2Frfi.my%2FAWdN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89%20-%20https%3A%2F%2Frfi.my%2FAWdN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWdN.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
