--- a/articles/rfi/999963.md
+++ b/articles/rfi/999963.md
@@ -1,5 +1,5 @@
-<!--1713345302000-->
-[欧盟立法选举在即 谁最不看好欧盟？原来是法国人](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3-%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F-%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA)
+<!--1713356105000-->
+[中美防长刚通电话 中国军机台湾海峡跟踪美国海军巡逻机](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D-%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA)
 ------
 
-<div>17/04/2024 - 10:45</div><img src="https://s.rfi.fr/media/display/c36512ec-bf69-11ee-8e73-005056a90284/w:1280/p:16x9/2024-01-08T190336Z_1637134550_RC2E2Z9ZWOZ4_RTRMADP_3_EUROPE-INVESTMENT-ACTIVISTS.JPG"><p><strong>欧洲联盟舆情民调今天公布的欧洲晴雨表调查显示，距离欧洲选举还有不到两个月的时间，法国人对欧盟表现出明显的悲观态度，而欧洲选举只引起法国少数人有兴趣。        </strong></p><div><p>据法新社今天报道说，在欧盟其他 26 个国家中，大多数受访者表示对欧盟的未来持乐观态度，其中丹麦、爱尔兰和立陶宛最为乐观。</p><p>法国是欧盟中仅次于德国的第二人口大国，也是唯一一个乐观主义者占少数（42%）的成员国，被悲观主义者（52%）超过。</p><p>法国近年来的这种趋势似乎有所发展，因为根据 2020 年底的一项调查，52% 的法国人对未来“非常”或“相当”乐观（相比之下，悲观主义者为 44%）。</p><p>在德国，乐观情绪仍然占大多数（60%），但与 2020 年（72%）相比也有所下降。</p><p>然而，欧盟并不是法国忧郁悲观情绪的唯一目标。因为如果 65% 的法国人认为“欧盟的事情正在朝着错误的方向发展”（相比之下，欧洲人的平均比例为 49%），那么更多的法国人 (76%) 认为他们正在朝着错误的方向发展。法国人多认为法国的方向错了。</p><p>法国人对个人生活水平的变化比欧洲平均水平更关心：69% 的人认为个人生活水平在过去五年中有所下降（而欧盟平均水平为 45%）。 53% 的人认为未来五年内还会下降（欧洲水平为 32%）。</p><p>欧盟人对欧盟（尤其是奥地利人和捷克人）抱有负面印象的人数也多于欧洲平均水平，并认为近年来欧盟在世界上的作用已变得“不那么重要”。</p><p>但法国人对欧洲议会的印象最差：如果41%的欧洲人对欧洲议会印象是正面的，那么只有27%的法国人对欧洲议会印象是正面的。 28% 的法国人（18% 的欧洲人）对这一重要的欧盟机构持反对意见。法国人中的大多数（53%）承认他们对欧洲选举不感兴趣，而欧盟平均有 60% 的公民对此感兴趣。</p><p>然而，绝大多数法国人（67%）表示，他们希望通过投票来续约这个总部位于斯特拉斯堡的议会，负责参与欧洲立法的通过。</p><p>关于欧盟及议会选举：只有 8% 的人知道这些选举的确切日期，这些选举是通过一轮直接普选产生的，定于 6 月 9 日在法国举行（在整个欧盟范围内于 6 月 6 日至 9 日之间举行）。 在欧洲，23%的受访者承认不知道投票何时举行，这一比例在法国上升至30%。法新社说，这显示是一个不小的问题。</p><p>当被问及法国的这种不信任时，欧洲议会发言人 Jaume Duch Guillot 强调，这“并不令人意外”。 “这是近年来的一个明显趋势，”他评论道，但不想提供任何解释。</p><p>在法国，一个非常反对欧洲建设的极右的国民联盟（RN，最右边）显然反而会是欧洲选举的赢家，最新民意调查显示，其得票率为 30-32%，远远领先于坚称拥护欧洲建设的总统马克龙的多数党名单（16-18%） ）。</p><p>据该报道，欧洲晴雨表调查是由欧洲议会委托于 2 月 7 日至 3 月 3 日对 27 个欧盟成员国的 26,411 名欧洲公民进行的。</p><p>选举后，欧洲议会总共将有 720 名代表，而目前为 705 名。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYH.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25AC%25A7%25E7%259B%259F%25E7%25AB%258B%25E6%25B3%2595%25E9%2580%2589%25E4%25B8%25BE%25E5%259C%25A8%25E5%258D%25B3-%25E8%25B0%2581%25E6%259C%2580%25E4%25B8%258D%25E7%259C%258B%25E5%25A5%25BD%25E6%25AC%25A7%25E7%259B%259F-%25E5%258E%259F%25E6%259D%25A5%25E6%2598%25AF%25E6%25B3%2595%25E5%259B%25BD%25E4%25BA%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWYH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWYH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYH.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 11:05</div><img src="https://s.rfi.fr/media/display/9dceba52-b9fe-11ea-a7ad-005056bf87d6/w:1280/p:16x9/roblin_poseidon.jpg"><p><strong>中国军方周三报告，派出战斗机对飞越敏感台湾海峡的美国海军巡逻机进行监视和警告。中国军方谴责美国此次在台湾海峡的飞行是“公开炒作”。美国军方称，“美国根据国际法在台湾海峡开展行动，维护了所有国家的航行权利和自由。”路透社说，此事件发生在中美国防部长互通电话几小时后。        </strong></p><div><p>中国派出战斗机在台湾海峡跟踪美国海军飞机。中国军方报告派出战斗机对飞越敏感台湾海峡的美国海军巡逻机进行监视和警告。</p><p>路透社的报道称，中国声称对民主治理的台湾拥有主权，并表示对该海峡拥有管辖权。台湾和美国对此存在争议，称台湾海峡是国际水道。</p><p>据美国海军第七舰队报告，P-8A海神海上巡逻侦察机也用于反潜任务，在国际空域飞越了台湾海峡。</p><p>美国在一份声明中表示：“美国根据国际法在台湾海峡开展行动，维护所有国家的航行权利和自由。” 并说，“这架飞机飞越台湾海峡表明了美国对自由开放的印太地区的承诺。”</p><p>中国军方称此次飞行是“公开炒作”，并公告说已派出战机对美机进行监视和警告，并且“依法依规予以处理”。</p><p>解放军东部战区在声明中表示，战区部队始终保持高度戒备，坚决捍卫国家主权安全和地区和平稳定。</p><p>根据台湾国防部消息，美军飞机经海峡向南飞行，台军已监测情况，但未发现任何异常。</p><p>上次美国海军宣布飞越台湾海峡是在去年12月，中国军方表示也派出了战斗机对飞机进行监视和警告。</p><p>最新的飞越任务是在美国国防部长奥斯汀与中国国防部长董军通话后不久进行的，两国防长通话是两国寻求恢复军事关系一年多来的首次接触。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYa.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E7%25BE%258E%25E9%2598%25B2%25E9%2595%25BF%25E5%2588%259A%25E9%2580%259A%25E7%2594%25B5%25E8%25AF%259D-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2586%259B%25E6%259C%25BA%25E5%258F%25B0%25E6%25B9%25BE%25E6%25B5%25B7%25E5%25B3%25A1%25E8%25B7%259F%25E8%25B8%25AA%25E7%25BE%258E%25E5%259B%25BD%25E6%25B5%25B7%25E5%2586%259B%25E5%25B7%25A1%25E9%2580%25BB%25E6%259C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAWYa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAWYa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYa.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
