--- a/articles/rfi/999966.md
+++ b/articles/rfi/999966.md
@@ -1,5 +1,5 @@
-<!--1713318302000-->
-[舒尔茨访华：未来可能是人人为己，唯一的赢家将是习近平 - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240416-%E8%88%92%E5%B0%94%E8%8C%A8%E8%AE%BF%E5%8D%8E-%E6%9C%AA%E6%9D%A5%E5%8F%AF%E8%83%BD%E6%98%AF%E4%BA%BA%E4%BA%BA%E4%B8%BA%E5%B7%B1%EF%BC%8C%E5%94%AF%E4%B8%80%E7%9A%84%E8%B5%A2%E5%AE%B6%E5%8F%AF%E8%83%BD%E6%98%AF%E4%B9%A0%E8%BF%91%E5%B9%B3)
+<!--1713356102000-->
+[视频 伊朗袭击以色列后 欧盟峰会讨论延长制裁伊朗](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%A7%86%E9%A2%91-%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E-%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97)
 ------
 
-<div>17/04/2024 - 01:10</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>法国世界报周二就德国总理舒尔茨对中国的访问发表了社论。在法国和德国关系疏远的背景下，法国世界报担心未来会出现人人为己的局面。法国世界报周二在社论中表示，德国总理在中国呼吁“公开和公平”的竞争，似乎，德国总理是忽视了北京只认力量较量的这个事实。如果欧洲人不团结起来作为一个整体来行动的话，就会面临被削弱的风险。                    </strong></p><div><p>法国世界报指出，2022年2月27日，即俄罗斯入侵乌克兰后三天，德国总理在德国联邦议会的讲台上庄严地宣布，“时代变了”(Zeitenwende)。</p><p>德国被迫承认多年来自己一直把赌注押在普京的理性上，把赌注押在依靠俄罗斯天然气的供应来维持德国工业的运转上，从而误入了歧途。</p><p>法国世界报表示，德国总理所说的“时代变了”不仅只涉及德国和俄国的关系。它还涉及到，在只知道弱肉强食的政权面前要捍卫民主和法治。</p><p>“时代变了”标志着“通过贸易来改变”（Wandel durch Handel）这一理论的终结。“通过贸易来改变”是德国的一个政治理论，根据该理论，通过与西方民主国家进行贸易，独裁政权必然会实现自由化。从这个意义上说，德国总理所说的时代变了，也事关中国。</p><p>然而，德国总理舒尔茨于4月14日星期日至4月16日星期二率领大型经济代表团访华显示了：当涉及与中国的关系时，舒尔茨这位德国社民党人对自己的定位与前总理默克尔是一致的，而不是与默克尔决裂。</p><p>法国世界报还指出，2023年3月，欧盟委员会主席冯德莱恩坚称需要“降低对中国的风险”，但尽管如此，许多德国企业家尤其是最大的德国企业家仍然认为，恰恰相反，主要的风险是没有足够地把赌押在雄心勃勃地要成为世界老大的全球第二大经济体中国的身上。目前在华经营的德国企业不少于5000家。</p><p><strong>“公开、公平”的竞争</strong></p><p>舒尔茨的环保部长贝尔博克（Annalena Baerbock）称习近平是“独裁者”，德国商界在“去风险”问题上存在分歧，而舒尔茨自己的政党社民党似乎相信中国可以影响俄罗斯在乌克兰问题上的立场。因此，舒尔茨在走钢丝。然而，舒尔茨呼吁中国进行“公开和公平”的竞争，似乎，德国总理忽视了北京是只认力量较量的这个事实。尽管中国的内需依然低迷，但习近平远没有做出丝毫的妥协，习近平是比以往任何时候都更加指望受到大量补贴的中国工业来征服新市场以确保中国经济有令人满意的增长。</p><p>身为中国共产党总书记的习近平事实上是一位保守派，他只信奉供给政策，他坚信，支持内需会让中国人懒惰，从而导致中国的衰落。舒尔茨是无法改变这种心态的。他应该更多地考虑众多欧洲国家对北京所持的保留意见，并从他自己做出的“时代变了”的总结中得出结论。</p><p>法国世界报的社论最后写道，2019年3月，习近平来到巴黎时，不仅受到马克龙的接见，还受到默克尔和时任欧盟委员会主席容克的接见。2024年春天，在中国国家主席准备对法国进行国事访问之前三周，德国总理访问中国。未来可能是人人为己，唯一的赢家可能是习近平。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div>
+<div>17/04/2024 - 13:25</div><img src="https://s.rfi.fr/media/display/7080199c-e6e1-11ee-bb42-005056a97e36/w:1280/p:16x9/AP24080521474896.jpg"><p><strong>欧盟首脑在布鲁塞尔举行会议，中东局势的危险升级是本次欧洲首脑会议的重要议题。欧盟可能跟随美国宣布对伊朗延长制裁措施，详情请见France24台记者 艾利克斯-勒布尔东（Alix Le Bourdon） 报道。        </strong></p><div><p>欧盟首脑今明两天在布鲁塞尔举行27个成员国峰会，中东局势的危险升级是本次欧洲首脑会议的重要议题，根据最新草案，欧盟可能跟随美国宣布对伊朗延长制裁措施，</p><p>France24台记者 艾利克斯-勒布尔东（Alix Le Bourdon） 从布鲁塞尔发出的报道指出，自从伊朗袭击以色列以来，西方外交一直处于紧急状态，欧盟27过呼吁以色列保持克制以避免冲突。</p><p>美国曾多次表示不想参与以色列可能做出的任何反应，并选择加强对伊斯兰政权的制裁。</p><p>随后欧盟27 国也想加强对伊朗的制裁，主要针对伊朗的武器库。</p><p>虽然此前本次欧盟首脑27国峰会原本打算完全讨论经济问题，但这些问题在很大程度上将由于国际局势严峻而被忽略。</p><p>本次欧盟首脑峰会首先关注伊朗问题和伊朗袭击以色列的后果，</p><p>从所能看到的最新结论草案显示27国呼吁各方保持最大限度的克制，并将讨论扩大已经实施的针对伊朗的制裁措施 。</p><p>欧盟从 2023 年 7 月对伊朗采取了一系列限制措施 ，主要是因为伊朗在乌克兰战争中支持俄罗斯 ，因此欧盟禁止向伊朗出口所需的生产无人机某些部件。</p><p>欧盟的想法是将这些限制扩大到其他类型的武器如导弹，这一提议得到了法国和德国的支持，而且希望将这些限制扩大到德黑兰在中东的盟友如黎巴嫩真主党。</p><p>分析指出不过目前这些制裁很可能在很大程度上仍是象征性，主要因为伊朗是逃避西方制裁的高手。</p><p>在本次为期两天的欧盟峰会期间，27 国还讨论加沙人民的处境并呼吁立即无条件停火进行人道救援。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWat.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25A7%2586%25E9%25A2%2591-%25E4%25BC%258A%25E6%259C%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2590%258E-%25E6%25AC%25A7%25E7%259B%259F%25E5%25B3%25B0%25E4%25BC%259A%25E8%25AE%25A8%25E8%25AE%25BA%25E5%25BB%25B6%25E9%2595%25BF%25E5%2588%25B6%25E8%25A3%2581%25E4%25BC%258A%25E6%259C%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWat.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWat.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWat.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
