--- a/articles/rfi/999967.md
+++ b/articles/rfi/999967.md
@@ -1,5 +1,5 @@
-<!--1713318302000-->
-[巴黎奥运将进入百日倒计时](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6)
+<!--1713356102000-->
+[德国突袭抓人口走私团伙 逮10人 多有中国人涉案](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E5%BE%B7%E5%9B%BD%E7%AA%81%E8%A2%AD%E6%8A%93%E4%BA%BA%E5%8F%A3%E8%B5%B0%E7%A7%81%E5%9B%A2%E4%BC%99-%E9%80%AE10%E4%BA%BA-%E5%A4%9A%E6%9C%89%E4%B8%AD%E5%9B%BD%E4%BA%BA%E6%B6%89%E6%A1%88)
 ------
 
-<div>16/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/7a533db2-fc32-11ee-9fbf-005056a97e36/w:1280/p:16x9/6db39559f747e0f1053aa6446f413ae46fbba34b-1.png"><p><strong></strong></p><div><p>为了满足大众的需求，这些门票中有一半的价格将低于 100 欧元，只有 5% 的门票价格超过 400 欧元。</p><p>16日，法国游泳奥运冠军劳瑞·马努多(Laure Manoudu)成为奥运圣火传递第二位火炬手。根据日程安排，奥运火炬将在希腊境内进行为期9天的传递，于4月26日离开希腊前往法国。4月26日下午17:30在泛雅典体育场，与巴黎奥组委代表团完成交接仪式。</p><p>交接结束后，圣火将在雅典的法国大使馆过夜，第二天登上三桅船“贝伦”号前往法国马赛，并于当地时间5月8日开始在法国展开为期68天的传递活动。最终将于当地时间7月26日，在巴黎点燃万众瞩目的主火炬，宣告第33届夏季奥运会正式开幕。</p><p>巴黎奥运会将于7月26日开幕。4月17日，法国巴黎将迎来夏季奥运会开幕倒计时100天。</p><p>法国总统马克龙15日在接受法国媒体采访时谈到了即将于7月26日在塞纳河上举行的巴黎奥运会开幕式，他表示如果安全风险过高，可能会放弃在塞纳河上举办。</p><p>马克龙表示，“我们可能会限制人数将开幕式放在特罗卡德罗广场举行，甚至是改在法兰西体育场举行。”</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUI.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E5%25B7%25B4%25E9%25BB%258E%25E5%25A5%25A5%25E8%25BF%2590%25E5%25B0%2586%25E8%25BF%259B%25E5%2585%25A5%25E7%2599%25BE%25E6%2597%25A5%25E5%2580%2592%25E8%25AE%25A1%25E6%2597%25B6&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6%20-%20https%3A%2F%2Frfi.my%2FAWUI.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6%20-%20https%3A%2F%2Frfi.my%2FAWUI.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUI.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 12:04</div><img src="https://s.rfi.fr/media/display/2e3bc838-b6df-11ee-b345-005056a97e36/w:1280/p:16x9/AP24019459879494.jpg"><p><strong>据德国警方今天在一份公告中表示，德国当局今天早些时候对一个国际人口走私团伙进行了大规模突袭。1000多名警察搜查了德国西部和南部的数十所住宅、商店和办公室，逮捕了10名嫌疑人，其中包括两名律师。涉案达数百中国人也遭问讯。        </strong></p><div><p>据美联社今天报道称，德国针对利用签证许可的人口走私团伙今天进行大规模突袭，并称逮捕10人。</p><p>犯罪嫌疑人被指控非法利用德国专门针对技术外国工人的特殊移民规定，为大约 350 名不符合所需标准的中国公民获取居留许可，以换取数十万欧元非法获利。 </p><p>据德国《图片报》报道，移民局的几名员工在该骗局中受到贿赂。</p><p>警方在北莱茵-威斯特法伦州、石勒苏益格-荷尔斯泰因州、黑森州、莱茵兰-普法尔茨州、巴登-符腾堡州、巴伐利亚州、汉堡和柏林进行了突击搜查，扣押了资产并收集了证据。</p><p>德国内政部长南希·费瑟感谢警方和检察官“大规模打击国际有组织移民偷运”。内政部长称，“在打击走私团伙的过程中，我们正是需要这种高水平的有力调查和持续的打击力度，”该部长坚称， “我们将继续采取严厉措施打击有组织的移民偷运。”</p><p>调查重点是北莱茵-威斯特法伦州，10 名嫌疑人目前被拘留在那里。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZX.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E5%25BE%25B7%25E5%259B%25BD%25E7%25AA%2581%25E8%25A2%25AD%25E6%258A%2593%25E4%25BA%25BA%25E5%258F%25A3%25E8%25B5%25B0%25E7%25A7%2581%25E5%259B%25A2%25E4%25BC%2599-%25E9%2580%25AE10%25E4%25BA%25BA-%25E5%25A4%259A%25E6%259C%2589%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BA%25BA%25E6%25B6%2589%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E5%9B%BD%E7%AA%81%E8%A2%AD%E6%8A%93%E4%BA%BA%E5%8F%A3%E8%B5%B0%E7%A7%81%E5%9B%A2%E4%BC%99%20%E9%80%AE10%E4%BA%BA%20%E5%A4%9A%E6%9C%89%E4%B8%AD%E5%9B%BD%E4%BA%BA%E6%B6%89%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWZX.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E5%9B%BD%E7%AA%81%E8%A2%AD%E6%8A%93%E4%BA%BA%E5%8F%A3%E8%B5%B0%E7%A7%81%E5%9B%A2%E4%BC%99%20%E9%80%AE10%E4%BA%BA%20%E5%A4%9A%E6%9C%89%E4%B8%AD%E5%9B%BD%E4%BA%BA%E6%B6%89%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWZX.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZX.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E5%9B%BD%E7%AA%81%E8%A2%AD%E6%8A%93%E4%BA%BA%E5%8F%A3%E8%B5%B0%E7%A7%81%E5%9B%A2%E4%BC%99%20%E9%80%AE10%E4%BA%BA%20%E5%A4%9A%E6%9C%89%E4%B8%AD%E5%9B%BD%E4%BA%BA%E6%B6%89%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
