--- a/articles/rfi/999969.md
+++ b/articles/rfi/999969.md
@@ -1,5 +1,5 @@
-<!--1713305701000-->
-[所罗门群岛将举行全国选举](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240416-%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE)
+<!--1713350701000-->
+[美亚太助卿康达会晤中国国台办官员 学者称不太寻常](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240417-%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98-%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8)
 ------
 
-<div>16/04/2024 - 22:49</div><img src="https://s.rfi.fr/media/display/72f66436-fa84-11ee-9d74-005056bf30b7/w:1280/p:16x9/2024-03-25T051154Z_17230021_RC2O02AQY5SK_RTRMADP_3_SOLOMONISLANDS-ELECTION.JPG"><p><strong></strong></p><div><p>大约 6780 名选举官员将参与其中—是 2019 年选举人数的两倍，因为选民还将选出新的省议会和霍尼亚拉市议会。为了防止发生骚乱，澳大利亚、新西兰和巴布亚新几内亚等邻国已在选举期间派出警察协助维持安全，因为此前选举之后都会出现一段时期的骚乱。</p><p>夏威夷大学太平洋岛屿研究中心副教授兼前主任塔西修斯·卡布陶拉卡称，这次选举“可能是所罗门群岛自独立以来最重要的一次”，因为该国持续存在的经济问题及其在中美之间更大竞争中所扮演的角色。</p><p>对于外国观察家来说，主要问题是所罗门群岛与中国的持续关系以及总理索加瓦雷是否会再次当选。索加瓦雷因在 2019 年将外交承认从台湾转为中国而闻名于海外。</p><p>这一有争议的决定引发了骚乱，2021 年 11 月，抗议者瞄准霍尼亚拉的唐人街，并试图冲进索加瓦雷的住所，应政府要求，在澳大利亚警察特遣队的帮助下恢复了和平。</p><p>随后在 2022 年，索加瓦雷与北京签署了一项秘密安全协议，引起了澳大利亚、新西兰和美国的恐慌，这些国家担心中国有一天可能会在那里建立海军基地，从而极大地扩大北京的军事影响力，该岛链位于澳大利亚布里斯班市以东约 2000 公里（1200 英里）处，距中国上海市东南部仅 6000 多公里（3728 英里）处。</p><p>索加瓦雷的最高职位竞争对手之一、直言不讳的国会议员、该国第一任总理的儿子小彼得·凯尼洛雷亚 (Peter Kenilorea Jr) 已承诺将与台湾建立关系。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240416-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E7%25BE%25A4%25E5%25B2%259B%25E5%25B0%2586%25E4%25B8%25BE%25E8%25A1%258C%25E5%2585%25A8%25E5%259B%25BD%25E9%2580%2589%25E4%25B8%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE%20-%20https%3A%2F%2Frfi.my%2FAWUK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE%20-%20https%3A%2F%2Frfi.my%2FAWUK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 11:49</div><img src="https://s.rfi.fr/media/display/7e261e0e-b47b-11ee-8b2f-005056a97e36/w:1280/p:16x9/AP24012403412983.jpg"><p><strong>中国外交部对外声明表示，康达（Daniel Kritenbrink）、白宫国安会中国与台湾事务资深主任柏兰（Sarah Beran）15日于北京会晤马朝旭。国台办16日声明指出，康达、柏兰等人也会晤了仇开明，“阐明了中方关于台湾问题的原则立场”。中央社今天引述学者认为，美国外交官员会晤中共涉台官员，这不太寻常，显示台海议题讯息交流获关切。        </strong></p><div><p>美国务院亚太事务助卿康达等人在北京会晤中国外交部副部长马朝旭、国台办副主任仇开明。台湾成功大学政治学系教授王宏仁今天对中央社剖析，美国外交事务官员会晤中共涉台官员，这不太寻常，其中还有白宫国安会人员随团，显见这趟到访不仅是为了美国国务卿布林肯（Antony Blinken）访问中国铺路，台海议题也是讨论项目。</p><p>王宏仁认为，美国外交系统官员会晤中共涉台官员，这不太寻常，可以视作中美双方包括台海议题在内等各个议题沟通顺畅的表现，也有稳定台海作用；不过国台办系统在中国政府体系算偏于事务性的单位，没有左右台海议题影响力。</p><p>台湾国家政策研究基金会副研究员李正修对中央社表示，过去时任国台办主任张志军也曾赴美访问，美国没有专门部门应对两岸关系，由美国务院等官员接待实为合理；美国外交系统官员在北京会晤国台办官员，这确实较为罕见。</p><p>李正修认为，这显示美中双方对于台海议题有高度关切感，北京多次强调“台湾红线”，拉出涉台单位对话美国；美国则是期盼台海维持现状、不被破坏，相信彼此在这场会晤中充分交换了意见，也有找到共识，外交场合的会晤，台面下谈及的、接触的，往往比对外宣布的多更多。</p><p>据中央社，中国外交部会后声明表示，美中双方依两国元首旧金山会晤和近期通话达成的重要共识，就推进中美各领域对话合作、妥善管控分歧进行了坦诚、深入、建设性的沟通。而美国务院会后新闻稿表示，康达、柏兰向仇开明强调维持台海和平稳定的重要性，美国基于台湾关系法、美中三公报、六项保证的一中政策没有改变。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240417-%25E7%25BE%258E%25E4%25BA%259A%25E5%25A4%25AA%25E5%258A%25A9%25E5%258D%25BF%25E5%25BA%25B7%25E8%25BE%25BE%25E4%25BC%259A%25E6%2599%25A4%25E4%25B8%25AD%25E5%259B%25BD%25E5%259B%25BD%25E5%258F%25B0%25E5%258A%259E%25E5%25AE%2598%25E5%2591%2598-%25E5%25AD%25A6%25E8%2580%2585%25E7%25A7%25B0%25E4%25B8%258D%25E5%25A4%25AA%25E5%25AF%25BB%25E5%25B8%25B8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98%20%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8%20-%20https%3A%2F%2Frfi.my%2FAWZD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98%20%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8%20-%20https%3A%2F%2Frfi.my%2FAWZD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98%20%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
