--- a/articles/rfi/999974.md
+++ b/articles/rfi/999974.md
@@ -1,5 +1,5 @@
-<!--1713303902000-->
-[英国首相敦促内塔尼亚胡保持克制](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240416-%E8%8B%B1%E5%9B%BD%E9%A6%96%E7%9B%B8%E6%95%A6%E4%BF%83%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6)
+<!--1713318302000-->
+[巴黎奥运将进入百日倒计时](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6)
 ------
 
-<div>16/04/2024 - 22:24</div><img src="https://s.rfi.fr/media/display/a29874b0-e795-11ee-8688-005056bfb2b6/w:1280/p:16x9/AP24080420627281.jpg"><p><strong></strong></p><div><p>苏纳克在周二下午的电话会议中强调，“局势大幅升级不符合任何人的利益，只会加剧中东的不安全局势。” “现在是表现出冷静的时候了”。</p><p>据唐宁街发言人称，英国政府首脑表示，伊朗“表现出严重误判，在国际舞台上日益孤立，七国集团正在协调外交回应”。</p><p>苏纳克重申英国“坚定不移地支持以色列的安全和该地区的安全”，并进一步强调，他仍然“严重关注加沙不断恶化的人道主义危机”，敦促以色列尽快开辟新的人道主义途径。</p><p>英国首相进一步表示，他“对哈马斯在周末阻止该协议深感失望，该协议本可以挽救巴勒斯坦人的生命并确保人质安全获释。”</p><p>周一，英国外相卡梅伦呼吁以色列不要对伊朗进行报复，以避免局势升级。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWTz.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240416-%25E8%258B%25B1%25E5%259B%25BD%25E9%25A6%2596%25E7%259B%25B8%25E6%2595%25A6%25E4%25BF%2583%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1%25E4%25BF%259D%25E6%258C%2581%25E5%2585%258B%25E5%2588%25B6&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E9%A6%96%E7%9B%B8%E6%95%A6%E4%BF%83%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6%20-%20https%3A%2F%2Frfi.my%2FAWTz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E9%A6%96%E7%9B%B8%E6%95%A6%E4%BF%83%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6%20-%20https%3A%2F%2Frfi.my%2FAWTz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWTz.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E9%A6%96%E7%9B%B8%E6%95%A6%E4%BF%83%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/7a533db2-fc32-11ee-9fbf-005056a97e36/w:1280/p:16x9/6db39559f747e0f1053aa6446f413ae46fbba34b-1.png"><p><strong></strong></p><div><p>为了满足大众的需求，这些门票中有一半的价格将低于 100 欧元，只有 5% 的门票价格超过 400 欧元。</p><p>16日，法国游泳奥运冠军劳瑞·马努多(Laure Manoudu)成为奥运圣火传递第二位火炬手。根据日程安排，奥运火炬将在希腊境内进行为期9天的传递，于4月26日离开希腊前往法国。4月26日下午17:30在泛雅典体育场，与巴黎奥组委代表团完成交接仪式。</p><p>交接结束后，圣火将在雅典的法国大使馆过夜，第二天登上三桅船“贝伦”号前往法国马赛，并于当地时间5月8日开始在法国展开为期68天的传递活动。最终将于当地时间7月26日，在巴黎点燃万众瞩目的主火炬，宣告第33届夏季奥运会正式开幕。</p><p>巴黎奥运会将于7月26日开幕。4月17日，法国巴黎将迎来夏季奥运会开幕倒计时100天。</p><p>法国总统马克龙15日在接受法国媒体采访时谈到了即将于7月26日在塞纳河上举行的巴黎奥运会开幕式，他表示如果安全风险过高，可能会放弃在塞纳河上举办。</p><p>马克龙表示，“我们可能会限制人数将开幕式放在特罗卡德罗广场举行，甚至是改在法兰西体育场举行。”</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUI.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E5%25B7%25B4%25E9%25BB%258E%25E5%25A5%25A5%25E8%25BF%2590%25E5%25B0%2586%25E8%25BF%259B%25E5%2585%25A5%25E7%2599%25BE%25E6%2597%25A5%25E5%2580%2592%25E8%25AE%25A1%25E6%2597%25B6&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6%20-%20https%3A%2F%2Frfi.my%2FAWUI.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6%20-%20https%3A%2F%2Frfi.my%2FAWUI.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUI.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
