--- a/articles/rfi/999976.md
+++ b/articles/rfi/999976.md
@@ -1,5 +1,5 @@
-<!--1713300302000-->
-[美国众议院本周或就援助乌克兰以色列及台湾等法案进行独立投票？](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8)
+<!--1713305701000-->
+[所罗门群岛将举行全国选举](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240416-%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE)
 ------
 
-<div>16/04/2024 - 22:27</div><img src="https://s.rfi.fr/media/display/f307a8a0-fc2e-11ee-bd36-005056bf30b7/w:1280/p:16x9/%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E8%BF%88%E5%85%8B%E2%80%A7%E7%BA%A6%E7%BF%B0%E9%80%8A%EF%BC%88Mike%20Johnson%EF%BC%89.jpg"><p><strong>美国众议院议长约翰逊4月15日表示，本周将就援助乌克兰、以色列及台湾等法案进行独立投票，以推进多项立法。        </strong></p><div><p>数月以来，美国在欧洲的盟友和乌克兰领导人一直敦促美国国会授权向基辅提供更多援助，并警告说，如果没有美国的额外支持，乌克兰军队可能会在与俄罗斯军队的战斗中失去更多阵地。</p><p>周一晚间，美国国会众议长迈克‧约翰逊（Mike Johnson）在与众议院共和党议员会面时，提出了对四项独立法案进行投票的建议，其中包括为台湾提供资金、对伊朗实施更多制裁，以及允许乌克兰兑现被扣押的俄罗斯资产的法案。</p><p>约翰逊在会后说：“我们在世界各地都有像普京、习近平和伊朗这样的恐怖分子、暴君和可怕的领导人，他们都在关注美国是否会为其盟友和我们自己在全球的利益挺身而出，我们会的。”</p><p>“我们将就对以色列的援助、对乌克兰的援助、对印度-太平洋地区的援助进行投票。然后是另一项包含国家安全优先事项的措施，其中包括……对伊朗的其它制裁以及我们在此讨论已久的其它措施。”“这是一个优先事项，我确实希望本周内能完成这项工作。”</p><p>约翰逊承认说：“乌克兰问题显然是共和党方面争议最大的问题”，“我认为美国人民应该得到解释，为什么在这里提供援助符合美国人的利益。”</p><p>该方案将偏离参议院在今年2月通过的950亿美元援助方案，是否能在美国参众两院获得通过仍未可知。但约翰逊表示，将与众议院民主党领袖哈基姆‧杰弗里斯（Hakeem Jeffries）进行讨论，以争取支持。</p><p>他说：“我们将遵守72小时规则。这可能意味着，如果我们明天（4月16日）早些时候得到法案文本，那就可能是周五晚上（表决）了。”</p><p>这表明，在伊朗对美国在中东最亲密的盟友以色列发动袭击两天后，约翰逊正在采取行动，包括向乌克兰、以色列和台湾提供更多军事援助。</p><p>上周五（4月12日），约翰逊曾经前往海湖庄园（Mar-a-Lago）与前总统特朗普会晤。特朗普随后告诉媒体，他正在“研究”乌克兰援助法案。但直到本周一，特朗普尚未对约翰逊的最新提议发表评论。</p><p>美国众议员玛乔丽‧泰勒‧格林（Marjorie Taylor Greene）直言不讳地反对援助乌克兰，并威胁要把约翰逊赶下议长宝座。周一，约翰逊撇开了格林会因为他的最新提议而将他赶下台的说法。他说：“我不会把时间花在担心撤换动议上。”</p><p>周一晚间，白宫也没有立即对约翰逊的提议做出回应。周一早些时候，美国总统拜登在欢迎捷克总理彼得‧菲亚拉（Petr Fiala）访问华盛顿的讲话中呼吁国会就补充援助法案采取行动。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWU5.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E6%259C%25AC%25E5%2591%25A8%25E6%2588%2596%25E5%25B0%25B1%25E6%258F%25B4%25E5%258A%25A9%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%258F%258A%25E5%258F%25B0%25E6%25B9%25BE%25E7%25AD%2589%25E6%25B3%2595%25E6%25A1%2588%25E8%25BF%259B%25E8%25A1%258C%25E7%258B%25AC%25E7%25AB%258B%25E6%258A%2595%25E7%25A5%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWU5.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 22:49</div><img src="https://s.rfi.fr/media/display/72f66436-fa84-11ee-9d74-005056bf30b7/w:1280/p:16x9/2024-03-25T051154Z_17230021_RC2O02AQY5SK_RTRMADP_3_SOLOMONISLANDS-ELECTION.JPG"><p><strong></strong></p><div><p>大约 6780 名选举官员将参与其中—是 2019 年选举人数的两倍，因为选民还将选出新的省议会和霍尼亚拉市议会。为了防止发生骚乱，澳大利亚、新西兰和巴布亚新几内亚等邻国已在选举期间派出警察协助维持安全，因为此前选举之后都会出现一段时期的骚乱。</p><p>夏威夷大学太平洋岛屿研究中心副教授兼前主任塔西修斯·卡布陶拉卡称，这次选举“可能是所罗门群岛自独立以来最重要的一次”，因为该国持续存在的经济问题及其在中美之间更大竞争中所扮演的角色。</p><p>对于外国观察家来说，主要问题是所罗门群岛与中国的持续关系以及总理索加瓦雷是否会再次当选。索加瓦雷因在 2019 年将外交承认从台湾转为中国而闻名于海外。</p><p>这一有争议的决定引发了骚乱，2021 年 11 月，抗议者瞄准霍尼亚拉的唐人街，并试图冲进索加瓦雷的住所，应政府要求，在澳大利亚警察特遣队的帮助下恢复了和平。</p><p>随后在 2022 年，索加瓦雷与北京签署了一项秘密安全协议，引起了澳大利亚、新西兰和美国的恐慌，这些国家担心中国有一天可能会在那里建立海军基地，从而极大地扩大北京的军事影响力，该岛链位于澳大利亚布里斯班市以东约 2000 公里（1200 英里）处，距中国上海市东南部仅 6000 多公里（3728 英里）处。</p><p>索加瓦雷的最高职位竞争对手之一、直言不讳的国会议员、该国第一任总理的儿子小彼得·凯尼洛雷亚 (Peter Kenilorea Jr) 已承诺将与台湾建立关系。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240416-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E7%25BE%25A4%25E5%25B2%259B%25E5%25B0%2586%25E4%25B8%25BE%25E8%25A1%258C%25E5%2585%25A8%25E5%259B%25BD%25E9%2580%2589%25E4%25B8%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE%20-%20https%3A%2F%2Frfi.my%2FAWUK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE%20-%20https%3A%2F%2Frfi.my%2FAWUK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
