--- a/articles/rfi/999979.md
+++ b/articles/rfi/999979.md
@@ -1,5 +1,5 @@
-<!--1713293102000-->
-[第77届戛纳电影节：导演双周公布片单 台湾影片《白衣苍狗》入选](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82-%E5%AF%BC%E6%BC%94%E5%8F%8C%E5%91%A8%E5%85%AC%E5%B8%83%E7%89%87%E5%8D%95-%E5%8F%B0%E6%B9%BE%E5%BD%B1%E7%89%87-%E7%99%BD%E8%A1%A3%E8%8B%8D%E7%8B%97-%E5%85%A5%E9%80%89)
+<!--1713303902000-->
+[中国奇瑞将签署在巴塞罗那生产协议](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE)
 ------
 
-<div>16/04/2024 - 16:58</div><img src="https://s.rfi.fr/media/display/979e33a6-fbef-11ee-bc3c-005056a97e36/w:1280/p:16x9/Sans%20titre%20%282%29-1.gif"><p><strong>继主竞赛单元、特别展映、戛纳首映、午夜展映、非竞赛单元和一种关注单元片单相继揭晓之后，第77届戛纳电影节平行单元之一的“导演双周”4月16日也正式公布入选片单，来自法国、美国、阿根廷、埃及等9部短片、22部长片入选。台湾导演曾威量和You Qiao Yin执导的首部长片《白衣苍狗》作为唯一一部华语片入选。        </strong></p><div><p>由法国导演工会1969年创办的导演双周是戛纳电影节平行的非竞赛单元，旨在鼓励和发掘新电影人，但每年的片单中也往往有一些知名导演入选。</p><p>导演双周的选片人Julien Rejl宣布，刚刚在去年去世的法国作者电影的标志性导演索菲-弗里尔斯（ Sophie Fillières ）的遗作《我的生活》 "Ma vie, ma gueule "将作为开幕片，该片由 Agnès Jaoui 主演。法国导演让-克里斯托弗-莫里斯执导的喜剧犯罪片《塑料枪》将作为闭幕片。比利时导演尚塔尔·阿克曼的《美国故事：食物、家庭和哲学》将作为特别展映。  </p><p>法国著名女演员伊莎贝尔-于佩尔（Isabelle Huppert）和哈夫西娅-赫兹（Hafsia Herzi）在法国女导演: 帕特里西亚·玛佐伊（Patricia Mazuy ）执导的影片 《波尔多的女囚》中饰演一对女权主义组合。</p><p>今年美国独立电影重回戛纳导演双周，尤其是由泰勒-陶尔米纳（Tyler Taormina）导演的《米勒角的平安夜》，影片汇集了米克尔-塞拉（Michael Cera）和好莱坞传奇人物弗朗西斯-斯科塞斯和索耶-斯皮尔伯格的子女等出演。</p><p>今年的导演双周片单包括了一些电影制作艰难的国家的影片。 其中有阿根廷导演埃尔南-罗塞利的影片《旧的、新的、借来的》 （Algo viejo、algo nuevo、algo prestado）。Julien Rejl表示，由于阿根廷总统米莱的极端自由主义政策，该国电影制作“岌岌可危"；片单中还包括了马赫迪-弗莱费尔（Mahdi Fleifel）的首部巴勒斯坦题材影片《前往未知之地》（"To a land unknown"），该片讲述了两个滞留雅典的巴勒斯坦表兄弟寻找前往德国之路的故事。</p><p>此外，还有一部由 Hala Elkoussy 拍摄的埃及电影《正午的东方》。Julien Rejl 称赞 "这位电影制作人的勇气，他表示，“埃及的审查制度从未如此严厉地打击电影制作人"。</p><p>2024戛纳电影节导演双周单元以日本著名演员北野武的一幅画作为官方海报，以此向北野武的诗意、幽默与滑稽致敬。1996年，北野武曾凭借《坏孩子的天空》入围戛纳导演双周单元。 </p><p> </p><p><strong>以下是2024年导演双周长片入选片单：</strong></p><p>1.    MA VIE MA GUEULE （我的生活）</p><p> 导演： 索菲 弗里尔斯（法国）（开幕片）</p><p>2.    À SON IMAGE（以他自己的形象）</p><p>导演：Thierry de Peretti（法国）</p><p>3.  CHRISTMAS EVE IN MILLER’S POINT （米勒角的圣诞夜 ）</p><p>导演：泰勒·陶尔米纳（美国）</p><p>4.  DESERT OF NAMIBIA（纳米比亚沙漠 ） </p><p>导演：山中洋子（日本）</p><p>5. EAST OF NOON（正午东部） </p><p>导演：Hala Elkoussy（埃及）</p><p>6. EAT THE NIGHT（晚上就餐） </p><p>导演：Caroline Poggi 和 Jonathan Vinel（法国）</p><p>7.  EEPHUS（埃菲斯）</p><p>导演：卡森·隆德（美国）（首部长片）</p><p> 8. GAZER （气体） </p><p>导演：瑞安·J·斯隆（美国）（首部长片）</p><p>9.  GHOST CAT ANZU  （鬼猫） </p><p>导演：Yôko Kuno 和 Nobuhiro Yamashita（日本）</p><p>10. GOOD ONE （好人）</p><p> 导演：印地·唐纳森（美国）（首部长片）</p><p>11. MONGREL  (白衣苍狗)</p><p> 导演：曾威量和 &You Qiao Yi（台湾） （首部长片）</p><p>12. LA PRISONNIÈRE DE BORDEAUX（波尔多的女囚）</p><p> 导演：Patricia Mazuy（法国）</p><p>13.SAVANNA AND THE MOUNTAIN （稀树草原和山） </p><p> 导演：保罗·卡内罗（葡萄牙）</p><p>14. SISTER MIDNIGHT （午夜修女 ）</p><p> 导演：Karan Kandhari（印度）</p><p>15. SOMETHING OLD, SOMETHING NEW, SOMETHING BORROWED （旧的、新的、借来的） </p><p>导演：埃尔南·罗塞利（阿根廷）</p><p>16. THE FALLING SKY（坠落的天空） </p><p>导演：Eryk Rocha 和 Gabriela Carneiro da Cunha（巴西）</p><p>17.  THE HYPERBOREANS  </p><p>导演：Cristóbal León 和 Joaquín Cociña（智利）</p><p> 18.T HE OTHER WAY AROUND（另一种方式）</p><p> 导演：乔纳斯·特鲁埃瓦（西班牙）</p><p>19. TO A LAND UNKNOWN （前往未知的土地 ）</p><p>导演：Mahdi Fleifel（巴勒斯坦、丹麦）</p><p>20. A UNIVERSAL LANGUAGE （通用语言） </p><p>导演：马修·兰金（加拿大）</p><p>21.  LES PISTOLETS EN PLASTIQUE （塑料枪）</p><p>导演：Jean-Christophe Meurisse（法国）（ 闭幕影片）</p><p>22.特别展映影片： </p><p>HISTOIRES D’AMÉRIQUE : FOOD, FAMILY AND PHILOSOPHY （美国故事：食物、家庭和哲学 ）</p><p>导演：尚塔尔·阿克曼（比利时）</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQz.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E7%25AC%25AC77%25E5%25B1%258A%25E6%2588%259B%25E7%25BA%25B3%25E7%2594%25B5%25E5%25BD%25B1%25E8%258A%2582-%25E5%25AF%25BC%25E6%25BC%2594%25E5%258F%258C%25E5%2591%25A8%25E5%2585%25AC%25E5%25B8%2583%25E7%2589%2587%25E5%258D%2595-%25E5%258F%25B0%25E6%25B9%25BE%25E5%25BD%25B1%25E7%2589%2587-%25E7%2599%25BD%25E8%25A1%25A3%25E8%258B%258D%25E7%258B%2597-%25E5%2585%25A5%25E9%2580%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%EF%BC%9A%E5%AF%BC%E6%BC%94%E5%8F%8C%E5%91%A8%E5%85%AC%E5%B8%83%E7%89%87%E5%8D%95%20%E5%8F%B0%E6%B9%BE%E5%BD%B1%E7%89%87%E3%80%8A%E7%99%BD%E8%A1%A3%E8%8B%8D%E7%8B%97%E3%80%8B%E5%85%A5%E9%80%89%20-%20https%3A%2F%2Frfi.my%2FAWQz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%EF%BC%9A%E5%AF%BC%E6%BC%94%E5%8F%8C%E5%91%A8%E5%85%AC%E5%B8%83%E7%89%87%E5%8D%95%20%E5%8F%B0%E6%B9%BE%E5%BD%B1%E7%89%87%E3%80%8A%E7%99%BD%E8%A1%A3%E8%8B%8D%E7%8B%97%E3%80%8B%E5%85%A5%E9%80%89%20-%20https%3A%2F%2Frfi.my%2FAWQz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQz.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%EF%BC%9A%E5%AF%BC%E6%BC%94%E5%8F%8C%E5%91%A8%E5%85%AC%E5%B8%83%E7%89%87%E5%8D%95%20%E5%8F%B0%E6%B9%BE%E5%BD%B1%E7%89%87%E3%80%8A%E7%99%BD%E8%A1%A3%E8%8B%8D%E7%8B%97%E3%80%8B%E5%85%A5%E9%80%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 22:35</div><img src="https://s.rfi.fr/media/display/d798ca48-fc30-11ee-881c-005056bf30b7/w:1280/p:16x9/Logo-Chery.png"><p><strong></strong></p><div><p>西班牙工业部在一份声明中表示，“两家公司达成了一项“协议”，将在位于巴塞罗那前日产工厂生产汽车”。</p><p>现阶段尚未透露该协议的细节，该协议将于周三在马德里举行的会议上签署，会议期间工业部长乔迪·俄瑞武（Jordi Hereu）和奇瑞代表团将在加泰罗尼亚地区政府成员出席的情况下签署。</p><p>加泰罗尼亚议会议长托伦德(Roger Torrent)高兴地说，“经过几个月的谈判，我们最终实现了前日产工厂的再工业化”，“埃布罗和奇瑞之间达成了生产数千辆汽车的协议”。因此前有消息说，中国奇瑞有意在意大利设分厂。</p><p>至于选址，奇瑞很可能会重启原先日产在巴塞罗那的工厂，恢复当地约1600个工作岗位。该工厂曾因产量减少于2021年停产关闭。</p><p>拥有 3,000 名员工的前日产工厂于 2021 年 12 月关闭。这个庞大工业综合体的一部分被出售给摩托车制造商 Silence 和 EV Motors，但地方当局与 EV Motors 一直在寻找另一家投资者完全重新启动该网站。</p><p>奇瑞是继电动汽车冠军比亚迪之后第二家宣布在欧洲设立工厂的中国制造商，比亚迪于二月份正式在匈牙利建设其第一家欧洲工厂。 后者将在三年内投入运营。</p><p>奇瑞成立于1997年，是一家国有企业。 该品牌声称到 2023 年将售出 188 万辆乘用车，大约 15 年前在中国非常受欢迎，尤其是针对当地市场的省油型城市汽车。</p><p>法新社表示，中国奇瑞做出这样的决定是不容易的。2023年下半年以来，欧美接连宣布对中国电动汽车发起调查措施。当年9月，欧盟宣布对中国电动汽车启动反补贴调查。2024年3月6日，欧盟发布公报称，“已掌握足够证据，表明出口到欧盟的中国电动汽车正在接受补贴”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A5%2587%25E7%2591%259E%25E5%25B0%2586%25E7%25AD%25BE%25E7%25BD%25B2%25E5%259C%25A8%25E5%25B7%25B4%25E5%25A1%259E%25E7%25BD%2597%25E9%2582%25A3%25E7%2594%259F%25E4%25BA%25A7%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWUA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWUA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
