--- a/articles/rfi/999981.md
+++ b/articles/rfi/999981.md
@@ -1,5 +1,5 @@
-<!--1713291301000-->
-[悉尼教堂持刀砍人案定性恐袭 马克龙称赞两位法国人英勇救人](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD-%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA)
+<!--1713303902000-->
+[英国首相敦促内塔尼亚胡保持克制](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240416-%E8%8B%B1%E5%9B%BD%E9%A6%96%E7%9B%B8%E6%95%A6%E4%BF%83%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6)
 ------
 
-<div>16/04/2024 - 17:44</div><img src="https://s.rfi.fr/media/display/1b5bd2be-fbe8-11ee-90d7-005056a90284/w:1280/p:16x9/2024-04-14T072041Z_689654122_RC2367AHS8HL_RTRMADP_3_AUSTRALIA-CRIME.JPG"><p><strong>澳大利亚警方今天表示，悉尼一座教会昨天在直播礼拜期间发生的持刀攻击案，是一起涉及宗教动机的极端主义恐怖行为。警方并呼吁当地社区民众控制怒火、保持冷静。法国总统马克龙今天赞扬两名法国人在抵御砍人案中的英雄行为。        </strong></p><div><p>据路透社今天报道称，悉尼西部郊区一座亚述基督教教堂昨天傍晚发生袭击事件，造成一名著名的主教受伤，所幸没有危及性命。</p><p>新南威尔斯州（New South Wales）警察局长韦柏（Karen Webb）在记者会上说：「将所有资料纳入考量后，我宣布这是一起恐怖事件。」她表示，这起攻击被视为是有宗教动机的「极端主义」行为，恐吓民众，包括教堂内的教区居民与观看线上直播的信徒。</p><p>韦柏表示，这名犯嫌「为警方所知」，但并没有被列在任何恐怖分子观察名单上。韦柏说，赶赴现场因应的警方很快就遭教会外的愤怒群众攻击，「民众利用现场可取用的物品攻击警察，包括拿砖头、混凝土与栅栏丢向警察、警察装置与警车」。</p><p>韦柏说一整个晚上都有受伤警察送医治疗。她虽没有提供受伤人数，但说这群民众损坏了20辆警车。</p><p>韦柏说：「这无法令人接受，涉及那场骚乱的人可以料想日后会有人来敲门，可能不是今天、也可能不会是明天，但我们会找到你，将你逮捕到案。」</p><p>该消息没有进一步民众对警方发怒的原因与细节。</p><p>据法新社消息，周二，法国总统马克龙赞扬了两名法国人的英勇行为，称他们是“真正的英雄”，他们在周六澳大利亚悉尼一家购物中心发生的另一次持刀袭击事件时进行了抵御，该事件导致六人死亡。</p><p>法国总统在 X 上写道：“我们的两位同胞表现得像真正的英雄，他因此非常自豪，对两人表达感激。”他还向“遭受袭击的澳大利亚人”表示“哀悼”。</p><p>法国大使表示，塞拉斯·德普雷奥和达米安·盖罗“在试图制服袭击者时表现出了极大的勇气”。</p><p>澳大利亚总理阿尔巴尼斯周二宣布，法国两人中的一位达米安·盖罗特(Damien Guerot)将获得澳大利亚公民身份，他在自动扶梯上用一根棍子英勇地击退了凶嫌。</p><p>事件中，五名妇女和一名巴基斯坦人保安丧生，该袭击并未归咎于恐怖主义。 警方正在调查袭击者是一名 40 岁的精神病男子，他是否专门针对女性行凶。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWRj.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E6%2582%2589%25E5%25B0%25BC%25E6%2595%2599%25E5%25A0%2582%25E6%258C%2581%25E5%2588%2580%25E7%25A0%258D%25E4%25BA%25BA%25E6%25A1%2588%25E5%25AE%259A%25E6%2580%25A7%25E6%2581%2590%25E8%25A2%25AD-%25E9%25A9%25AC%25E5%2585%258B%25E9%25BE%2599%25E7%25A7%25B0%25E8%25B5%259E%25E4%25B8%25A4%25E4%25BD%258D%25E6%25B3%2595%25E5%259B%25BD%25E4%25BA%25BA%25E8%258B%25B1%25E5%258B%2587%25E6%2595%2591%25E4%25BA%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD%20%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWRj.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD%20%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWRj.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWRj.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD%20%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 22:24</div><img src="https://s.rfi.fr/media/display/a29874b0-e795-11ee-8688-005056bfb2b6/w:1280/p:16x9/AP24080420627281.jpg"><p><strong></strong></p><div><p>苏纳克在周二下午的电话会议中强调，“局势大幅升级不符合任何人的利益，只会加剧中东的不安全局势。” “现在是表现出冷静的时候了”。</p><p>据唐宁街发言人称，英国政府首脑表示，伊朗“表现出严重误判，在国际舞台上日益孤立，七国集团正在协调外交回应”。</p><p>苏纳克重申英国“坚定不移地支持以色列的安全和该地区的安全”，并进一步强调，他仍然“严重关注加沙不断恶化的人道主义危机”，敦促以色列尽快开辟新的人道主义途径。</p><p>英国首相进一步表示，他“对哈马斯在周末阻止该协议深感失望，该协议本可以挽救巴勒斯坦人的生命并确保人质安全获释。”</p><p>周一，英国外相卡梅伦呼吁以色列不要对伊朗进行报复，以避免局势升级。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWTz.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240416-%25E8%258B%25B1%25E5%259B%25BD%25E9%25A6%2596%25E7%259B%25B8%25E6%2595%25A6%25E4%25BF%2583%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1%25E4%25BF%259D%25E6%258C%2581%25E5%2585%258B%25E5%2588%25B6&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E9%A6%96%E7%9B%B8%E6%95%A6%E4%BF%83%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6%20-%20https%3A%2F%2Frfi.my%2FAWTz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E9%A6%96%E7%9B%B8%E6%95%A6%E4%BF%83%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6%20-%20https%3A%2F%2Frfi.my%2FAWTz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWTz.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E9%A6%96%E7%9B%B8%E6%95%A6%E4%BF%83%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
