--- a/articles/rfi/999983.md
+++ b/articles/rfi/999983.md
@@ -1,5 +1,5 @@
-<!--1713284102000-->
-[继非洲毛驴之后，穿山甲又成为中华传统的牺牲品 - 环保天地](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E4%BF%9D%E5%A4%A9%E5%9C%B0/20240416-%E7%BB%A7%E9%9D%9E%E6%B4%B2%E6%AF%9B%E9%A9%B4%E4%B9%8B%E5%90%8E%EF%BC%8C%E7%A9%BF%E5%B1%B1%E7%94%B2%E5%8F%88%E6%88%90%E4%B8%BA%E4%B8%AD%E5%8D%8E%E4%BC%A0%E7%BB%9F%E7%9A%84%E7%89%BA%E7%89%B2%E5%93%81)
+<!--1713300302000-->
+[美国众议院本周或就援助乌克兰以色列及台湾等法案进行独立投票？](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8)
 ------
 
-<div>16/04/2024 - 17:30</div><img src="https://s.rfi.fr/media/display/87b6f128-e5a6-11ec-8321-005056bfb2b6/w:1280/p:16x9/AP19047535489920.jpg"><p><strong>在非洲的毛驴之后，非洲的穿山甲正在成为中国传统营养医学的新的牺牲品。记得今年二月，非洲联盟决定禁止对中国出口毛驴之后，中国有媒体报道说，事实上，中国古代的医学书上明确记载着，阿胶的制作来源是牛皮，而并非是毛驴皮。可惜这么多年来每年因其皮囊而遭到无辜宰杀的数千万头非洲毛驴。                    </strong></p><div><p>同毛驴一样，穿山甲也同样没有任何药用价值，但是，尽管如此，自 2000 年代以来，穿山甲鳞片的使用导致穿山甲贩运的激增，尤其是从非洲被运往中国。在中国，穿山甲的鳞片或血液被用来制作各种药剂，包括一种据说能增强阳刚之气的药剂。而事实上，穿山甲的鳞片同我们人类的指甲一样是由角蛋白制成，它并没有任何特殊的功用。</p><p>而且，为了提高穿山甲的市场价格，人们往往活捉穿山甲，这或许就是新冠疫情初期，穿山甲曾经被认为是病毒从动物传染给人的中间宿主的原因所在。</p><p><strong>非法贩卖非洲穿山甲的路线</strong></p><p>目前世界上已知的穿山甲共有 8 种，其中有 4 种在亚洲，另外4 种在中非。 刚果盆地森林是世界第二大热带森林，由喀麦隆、中非共和国、刚果共和国、刚果民主共和国、加蓬和赤道几内亚六个国家共同拥有，这里是非洲穿山甲的主要栖息地。</p><p>原则上，穿山甲是一种受保护的动物，其贸易自 2017 年起被禁止。然而，非法捕获以及贩卖穿山甲的活动却正在蓬勃发展。据中非地区安全研究所（Institute for Security Studies）中非地区协调员奥卢沃勒-奥杰瓦莱（Oluwole Ojewale）去年发表的一份报告，这种非法贸易带来了数百万美元的收入。倘若不立刻采取措施，穿山甲面临被灭绝的危险。法广法语部记者Amelie Tulet 发自喀麦隆的报道说<strong>：</strong>“这是一个涉及数百万美元的贸易，穿山甲的肉体与鳞片的消费者主要位于亚洲，它们往往在刚果流域的森林中被捕获，由于当捕食者靠近时，穿山甲就会自动卷成团，因此很容易被捕获。之后，村民将其卖给中间商。这些哺乳动物或完整或被宰杀后，经由港口离开非洲大陆，向西途经尼日利亚，向东途经坦桑尼亚和肯尼亚，或乘飞机离开。在喀麦隆，包括《每日新闻》的马蒂亚斯-穆安德-恩加莫在内的几位记者一直在调查这种贩运活动，据他介绍，<em>例如，在机场，一名海关官员告诉我们，贩运者有时会将鳞片碾成粉末，装入牛奶罐中，以便神不知鬼不觉地通过海关 </em>。虽然穿山甲在新冠疫情爆发初期曾经饱受批评，但它在森林生态系统中事实上发挥着重要的调节作用。喀麦隆记者马蒂亚斯-穆恩德-恩加莫介绍说， ‘一只穿山甲每天要消耗大约 20 万只蚂蚁和白蚁，一只穿山甲每年要消耗大约 7000 万只蚂蚁和白蚁。我们可以看到这对刚果盆地森林的影响，对我们种植园的影响则更为重要<em>。 ’</em>到目前为止，刚果流域森林中究竟有多少只穿山甲尚且有待于统计，但是，有一点可以肯定，倘若，不立即采取措施，那么，这种动物将面临被偷猎至灭绝的危险。“</p><p><strong>如何才能有效保护面临灭绝威胁的穿山甲？</strong></p><p>尼日利亚的专家奥卢沃勒-奥杰瓦莱（Oluwole Ojewale）向法广指出，问题在于无论是在非洲当地还是在国际上都缺乏打击这种贩运背后网络的培训和资源，缺乏人力资源，包括护林员，安全执法人员等等，再就是缺乏信息与法规。因为在绝大多数国家，民众并不知道有关保护或禁止穿山甲贸易的法律"。</p><p>确实，要避免穿山甲的物种消失，一方面必须禁止并且切实地阻止非法狩猎，严厉禁止非法贸易。另一方面，还必须从消费者这端着手，因为消费这种受到保护的动物本身也是一种犯法的行为，而且这种消费并没有任何价值。</p><p><a href="http://www.cbcgdf.org/NewsShow/4936/24388.html#:~:text=1.穿山甲的外貌和生活习性&text=它们的四肢粗壮，爪子,和味觉来寻找食物。" target="_blank">中国生物多样性保护与绿色基金会的网站</a>上就明确规定，2020年起，中国将穿山甲由国家二级保护野生动物提升至一级，2020年版的《中国药典》也将穿山甲进行了移除，因为今天大家都明白，野生动物不应该被用来做药材。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>16/04/2024 - 22:27</div><img src="https://s.rfi.fr/media/display/f307a8a0-fc2e-11ee-bd36-005056bf30b7/w:1280/p:16x9/%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E8%BF%88%E5%85%8B%E2%80%A7%E7%BA%A6%E7%BF%B0%E9%80%8A%EF%BC%88Mike%20Johnson%EF%BC%89.jpg"><p><strong>美国众议院议长约翰逊4月15日表示，本周将就援助乌克兰、以色列及台湾等法案进行独立投票，以推进多项立法。        </strong></p><div><p>数月以来，美国在欧洲的盟友和乌克兰领导人一直敦促美国国会授权向基辅提供更多援助，并警告说，如果没有美国的额外支持，乌克兰军队可能会在与俄罗斯军队的战斗中失去更多阵地。</p><p>周一晚间，美国国会众议长迈克‧约翰逊（Mike Johnson）在与众议院共和党议员会面时，提出了对四项独立法案进行投票的建议，其中包括为台湾提供资金、对伊朗实施更多制裁，以及允许乌克兰兑现被扣押的俄罗斯资产的法案。</p><p>约翰逊在会后说：“我们在世界各地都有像普京、习近平和伊朗这样的恐怖分子、暴君和可怕的领导人，他们都在关注美国是否会为其盟友和我们自己在全球的利益挺身而出，我们会的。”</p><p>“我们将就对以色列的援助、对乌克兰的援助、对印度-太平洋地区的援助进行投票。然后是另一项包含国家安全优先事项的措施，其中包括……对伊朗的其它制裁以及我们在此讨论已久的其它措施。”“这是一个优先事项，我确实希望本周内能完成这项工作。”</p><p>约翰逊承认说：“乌克兰问题显然是共和党方面争议最大的问题”，“我认为美国人民应该得到解释，为什么在这里提供援助符合美国人的利益。”</p><p>该方案将偏离参议院在今年2月通过的950亿美元援助方案，是否能在美国参众两院获得通过仍未可知。但约翰逊表示，将与众议院民主党领袖哈基姆‧杰弗里斯（Hakeem Jeffries）进行讨论，以争取支持。</p><p>他说：“我们将遵守72小时规则。这可能意味着，如果我们明天（4月16日）早些时候得到法案文本，那就可能是周五晚上（表决）了。”</p><p>这表明，在伊朗对美国在中东最亲密的盟友以色列发动袭击两天后，约翰逊正在采取行动，包括向乌克兰、以色列和台湾提供更多军事援助。</p><p>上周五（4月12日），约翰逊曾经前往海湖庄园（Mar-a-Lago）与前总统特朗普会晤。特朗普随后告诉媒体，他正在“研究”乌克兰援助法案。但直到本周一，特朗普尚未对约翰逊的最新提议发表评论。</p><p>美国众议员玛乔丽‧泰勒‧格林（Marjorie Taylor Greene）直言不讳地反对援助乌克兰，并威胁要把约翰逊赶下议长宝座。周一，约翰逊撇开了格林会因为他的最新提议而将他赶下台的说法。他说：“我不会把时间花在担心撤换动议上。”</p><p>周一晚间，白宫也没有立即对约翰逊的提议做出回应。周一早些时候，美国总统拜登在欢迎捷克总理彼得‧菲亚拉（Petr Fiala）访问华盛顿的讲话中呼吁国会就补充援助法案采取行动。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWU5.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E6%259C%25AC%25E5%2591%25A8%25E6%2588%2596%25E5%25B0%25B1%25E6%258F%25B4%25E5%258A%25A9%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%258F%258A%25E5%258F%25B0%25E6%25B9%25BE%25E7%25AD%2589%25E6%25B3%2595%25E6%25A1%2588%25E8%25BF%259B%25E8%25A1%258C%25E7%258B%25AC%25E7%25AB%258B%25E6%258A%2595%25E7%25A5%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWU5.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
