--- a/articles/rfi/999993.md
+++ b/articles/rfi/999993.md
@@ -1,5 +1,5 @@
-<!--1713273301000-->
-[菲律宾总统欢迎日本自卫队从明年起参加美菲“肩并肩”等联合军演](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2-%E8%82%A9%E5%B9%B6%E8%82%A9-%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94)
+<!--1713280501000-->
+[美国指控中国补贴芬太尼生产](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E6%8C%87%E6%8E%A7%E4%B8%AD%E5%9B%BD%E8%A1%A5%E8%B4%B4%E8%8A%AC%E5%A4%AA%E5%B0%BC%E7%94%9F%E4%BA%A7)
 ------
 
-<div>16/04/2024 - 15:00</div><img src="https://s.rfi.fr/media/display/9bebb08e-b471-11ee-94ac-005056bf30b7/w:1280/p:16x9/AP24015603830995.jpg"><p><strong>菲律宾总统马科斯4月15日欢迎日本自卫队从明年起正式参加美菲两军实施的“肩并肩”等联合演习，：“我认为日本参加是很好的行动”。        </strong></p><div><p>共同社报道，提到中国，马科斯谴责称，最近菲律宾在南海“遭受了非法的、攻击性的不负责任行为”。他表示对日本自卫队正式参加美菲联合演习“没有异议”，强调日美菲朝着“维护和平稳定与航行自由，彻底遵守国际法”的目标，“能够最大限度地运用所拥有的力量”。</p><p>马科斯11日出席了在美国华盛顿召开的日美菲三国首脑会谈，就设立人道主义援助和应对灾害的三国演习达成共识，发布声明，明年三国演习将加入美菲“肩并肩”等联合演习中。</p><p>在记者会上，马科斯就方便日本自卫队参加联合演习的日菲间的《互惠准入协定》（RAA）透露说，谈判没有争议点，预计很快就能签署。</p><p>“肩并肩”是美菲两军每年举行的最大规模演习。今年将于4月22日至5月10日实施，预计约1.7万名官兵参加。马科斯指出：“计划首次举行网络安全保障与指挥统制训练，将是最复杂、规模最大的演习。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWP1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E8%258F%25B2%25E5%25BE%258B%25E5%25AE%25BE%25E6%2580%25BB%25E7%25BB%259F%25E6%25AC%25A2%25E8%25BF%258E%25E6%2597%25A5%25E6%259C%25AC%25E8%2587%25AA%25E5%258D%25AB%25E9%2598%259F%25E4%25BB%258E%25E6%2598%258E%25E5%25B9%25B4%25E8%25B5%25B7%25E5%258F%2582%25E5%258A%25A0%25E7%25BE%258E%25E8%258F%25B2-%25E8%2582%25A9%25E5%25B9%25B6%25E8%2582%25A9-%25E7%25AD%2589%25E8%2581%2594%25E5%2590%2588%25E5%2586%259B%25E6%25BC%2594&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94%20-%20https%3A%2F%2Frfi.my%2FAWP1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94%20-%20https%3A%2F%2Frfi.my%2FAWP1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWP1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 16:53</div><img src="https://s.rfi.fr/media/display/e78934b4-131f-11ea-886c-005056a99247/w:1280/p:16x9/063_609942630.jpg"><p><strong>周二，一个由美国民选官员组成的委员会指责中国当局间接参与芬太尼的生产，芬太尼是一种强效鸦片制剂，每年导致美国数万人死亡。        </strong></p><div><p>据法新社今天报道称，根据美国众议院民选官员设立的负责中国共产党政策的特别委员会发表的一份报告，中国政府补贴生产芬太尼前体的实验室的活动，芬太尼前体是制造芬太尼所必需的原料。</p><p>该委员会当选成员的一名助理在电话新闻发布会上表示，“这些补贴采取增值税减免的形式。我们观察到，接受补贴的公司销售的药品平均多出十倍。”</p><p>该报告称，大多数涉案公司都是合法注册的，在美国和欧洲拥有众多其他产品的客户。 因此，芬太尼前体的生产和出口不一定是它们的主要活动。</p><p>为了减少中国的芬太尼威胁，该委员会建议设立一个专门机构，具有制裁能力，不仅可以针对这些实验室，还可以针对数字平台以及为它们提供融资的银行，以截断生产芬太尼各个环节的盈利。</p><p>但报告警告，这种方法只有在全球层面加强合作才能取得成果，才能提高有效性。</p><p>芬太尼是一种用于医疗领域的强效合成鸦片制剂，但芬太尼可能被滥用为药物，据美国当局称，芬太尼每年导致美国超过 70,000 人因服药过量死亡，其中主要是 18 至 49 岁的年龄段。 </p><p>美国财政部长耶伦本月早些时候访华期间提出了这个话题，其中包括开始讨论加强反洗钱合作。</p><p>该合作的具体目标是切断毒贩的资金来源，从而减少鸦片制剂流向美国。</p><p>法新社说，如果说迄今为止芬太尼主要来自中国，那么现在市场主要由墨西哥贩毒集团主导。</p><p>中国实验室涉嫌向毒贩（尤其是墨西哥毒贩）提供用于制造芬太尼的物质。</p><p>美国指责中国在打击这些芬太尼成分的非法生产和出口方面做得不够。消息称，中国对国内芬太尼威胁称零容忍，但是对出口芬太尼管制相对宽松。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E6%258C%2587%25E6%258E%25A7%25E4%25B8%25AD%25E5%259B%25BD%25E8%25A1%25A5%25E8%25B4%25B4%25E8%258A%25AC%25E5%25A4%25AA%25E5%25B0%25BC%25E7%2594%259F%25E4%25BA%25A7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E6%8C%87%E6%8E%A7%E4%B8%AD%E5%9B%BD%E8%A1%A5%E8%B4%B4%E8%8A%AC%E5%A4%AA%E5%B0%BC%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWQw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E6%8C%87%E6%8E%A7%E4%B8%AD%E5%9B%BD%E8%A1%A5%E8%B4%B4%E8%8A%AC%E5%A4%AA%E5%B0%BC%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWQw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E6%8C%87%E6%8E%A7%E4%B8%AD%E5%9B%BD%E8%A1%A5%E8%B4%B4%E8%8A%AC%E5%A4%AA%E5%B0%BC%E7%94%9F%E4%BA%A7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
