--- a/articles/rfi/999994.md
+++ b/articles/rfi/999994.md
@@ -1,5 +1,5 @@
-<!--1713271502000-->
-[以色列战时内阁仍在讨论军事反击伊朗但避免大战](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240416-%E4%BB%A5%E8%89%B2%E5%88%97%E6%88%98%E6%97%B6%E5%86%85%E9%98%81%E4%BB%8D%E5%9C%A8%E8%AE%A8%E8%AE%BA%E5%86%9B%E4%BA%8B%E5%8F%8D%E5%87%BB%E4%BC%8A%E6%9C%97%E4%BD%86%E9%81%BF%E5%85%8D%E5%A4%A7%E6%88%98)
+<!--1713278703000-->
+[美国大使抵访韩朝边境 敦促俄中不要“奖励”朝鲜的不良行为](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83-%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81-%E5%A5%96%E5%8A%B1-%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA)
 ------
 
-<div>16/04/2024 - 14:12</div><img src="https://s.rfi.fr/media/display/00e48a06-fbc1-11ee-8cf4-005056a90284/w:1280/p:16x9/2024-03-17T170954Z_518572443_RC2RN6AK4UMO_RTRMADP_3_ISRAEL-PALESTINIANS-ISRAEL-SCHOLZ.JPG"><p><strong>以色列战时内阁应当于16日今天再次召开会议讨论如何报复伊朗的方案。在15日的内阁会议上，以色列战时内阁讨论了针对直接袭击以色列的伊朗的报复措施，讨论时间约为三个小时。 《以色列时报》等当地报纸报道称，该内阁政府讨论了几种不会导致地区战争的选择。        </strong></p><div><p>据读卖新闻今天报道称，以色列战时内阁继续就针对伊朗的报复措施进行讨论，有避免战争的多种选择。</p><p>该报道引述《华盛顿邮报》消息，他们正在考虑如何在不造成众多死亡的情况下进行报复。这些攻击包括对伊朗设施和网络攻击的可能性。美国有线电视新闻网消息称，除了军事回应外，美国还确认了在外交上孤立伊朗的措施。</p><p>以色列陆军参谋长赫齐·哈勒维15日视察了遭到伊朗袭击的以色列空军基地，他说，“伊朗将受到与伊朗实施的袭击相称的报复。”</p><p>国际社会越来越多的呼吁要求以色列做出克制反应。 15日，美国总统拜登强调了对以色列的支持，但也表示，“我想阻止冲突进一步升级”。他是在白宫与伊拉克总理会面开始时发表上述讲话的。</p><p>英国首相苏纳克15日也在英国议会呼吁“各方”保持克制，并表示有意尽快与以色列总理内塔尼亚胡举行会谈。</p><p>法国总统马克龙15日对法国电视台表示，“我们所希望的是我们将尽一切可能避免紧张局势升级”，并表示将与七国集团(G7)国家合作，敦促以色列保持克制。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWOT.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240416-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E6%2588%2598%25E6%2597%25B6%25E5%2586%2585%25E9%2598%2581%25E4%25BB%258D%25E5%259C%25A8%25E8%25AE%25A8%25E8%25AE%25BA%25E5%2586%259B%25E4%25BA%258B%25E5%258F%258D%25E5%2587%25BB%25E4%25BC%258A%25E6%259C%2597%25E4%25BD%2586%25E9%2581%25BF%25E5%2585%258D%25E5%25A4%25A7%25E6%2588%2598&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E6%88%98%E6%97%B6%E5%86%85%E9%98%81%E4%BB%8D%E5%9C%A8%E8%AE%A8%E8%AE%BA%E5%86%9B%E4%BA%8B%E5%8F%8D%E5%87%BB%E4%BC%8A%E6%9C%97%E4%BD%86%E9%81%BF%E5%85%8D%E5%A4%A7%E6%88%98%20-%20https%3A%2F%2Frfi.my%2FAWOT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E6%88%98%E6%97%B6%E5%86%85%E9%98%81%E4%BB%8D%E5%9C%A8%E8%AE%A8%E8%AE%BA%E5%86%9B%E4%BA%8B%E5%8F%8D%E5%87%BB%E4%BC%8A%E6%9C%97%E4%BD%86%E9%81%BF%E5%85%8D%E5%A4%A7%E6%88%98%20-%20https%3A%2F%2Frfi.my%2FAWOT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWOT.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E6%88%98%E6%97%B6%E5%86%85%E9%98%81%E4%BB%8D%E5%9C%A8%E8%AE%A8%E8%AE%BA%E5%86%9B%E4%BA%8B%E5%8F%8D%E5%87%BB%E4%BC%8A%E6%9C%97%E4%BD%86%E9%81%BF%E5%85%8D%E5%A4%A7%E6%88%98&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 15:53</div><img src="https://s.rfi.fr/media/display/d9cbf072-6bba-11ed-9d99-005056bf30b7/w:1280/p:16x9/AP22313661331641.jpg"><p><strong>美国驻联合国大使周二敦促俄罗斯和中国改弦更张，停止奖励朝鲜的不良行为，并阻止朝鲜因武器计划而逃避制裁。        </strong></p><div><p>美国驻联合国特使敦促俄罗斯和中国不要“奖励”朝鲜的不良行为。美国驻联合国大使琳达·托马斯·格林菲尔德于 2024 年 4 月 16 日在韩国板门店休战村附近的坡州博尼法斯美军基地向记者发表讲话时发表上述言论。</p><p>琳达·托马斯·格林菲尔德大使访问了韩朝边境非军事区，非军事区是朝韩两国之间戒备森严的边界，路透社今天报道称，严格来说，两国仍处于交战状态。</p><p>在她访问韩国之前，俄罗斯拒绝了多国专家小组的年度更新，该小组在过去15年里一直监督联合国旨在遏制朝鲜核计划和导弹计划的制裁措施的执行情况。</p><p>托马斯-格林菲尔德表示，莫斯科的否决和中国的弃权只会“增强”朝鲜规避国际制裁的做法，并“保护”朝鲜免受问责。</p><p>她告诉记者，“隐藏真相并不能改变事实。奖励不良行为只会鼓励这种行为。”她说， “我们敦促俄罗斯和中国改弦更张，并再次敦促平壤选择外交手段，来到谈判桌前致力于建设性对话。”</p><p>据格林菲尔德表示，华盛顿将与韩国、日本和安理会其他伙伴合作，寻找“一些创造性的方式、一些创造性的思维”，以继续监督制裁的执行和该小组开展的其他工作说。</p><p>后来在首尔，她会见了一群年轻的朝鲜叛逃者，称赞他们逃往韩国“勇敢、鼓舞人心”。她告诉他们：“我的首要任务之一是让世界知道朝鲜侵犯人权行为，提高人们对逃亡者的关注度并扩大逃亡者的声音。”她指的是朝鲜官方名称“民主人民共和国”的首字母缩写。</p><p>托马斯-格林菲尔德于周日抵达，并于周一会见了韩国总统尹锡悦以及首尔外交部长和国防部长，讨论如何阻止朝鲜的武器计划并在这个与世隔绝的国家促进人权。</p><p>美国大使还将前往日本，预计会见2000年代初被朝鲜绑架的日本公民的家人，并访问1945年遭到美国核弹袭击的长崎，直到周六。</p><p>据路透社说，韩国和日本都是美国的盟友，目前均是安理会成员。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQ0.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E5%25A4%25A7%25E4%25BD%25BF%25E6%258A%25B5%25E8%25AE%25BF%25E9%259F%25A9%25E6%259C%259D%25E8%25BE%25B9%25E5%25A2%2583-%25E6%2595%25A6%25E4%25BF%2583%25E4%25BF%2584%25E4%25B8%25AD%25E4%25B8%258D%25E8%25A6%2581-%25E5%25A5%2596%25E5%258A%25B1-%25E6%259C%259D%25E9%25B2%259C%25E7%259A%2584%25E4%25B8%258D%25E8%2589%25AF%25E8%25A1%258C%25E4%25B8%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83%20%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81%E2%80%9C%E5%A5%96%E5%8A%B1%E2%80%9D%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA%20-%20https%3A%2F%2Frfi.my%2FAWQ0.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83%20%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81%E2%80%9C%E5%A5%96%E5%8A%B1%E2%80%9D%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA%20-%20https%3A%2F%2Frfi.my%2FAWQ0.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQ0.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83%20%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81%E2%80%9C%E5%A5%96%E5%8A%B1%E2%80%9D%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
