--- a/articles/rfi/999995.md
+++ b/articles/rfi/999995.md
@@ -1,5 +1,5 @@
-<!--1713271502000-->
-[视频 奥林匹克圣火 赛艇冠军恩图斯科斯首接](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E8%A7%86%E9%A2%91-%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB-%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5)
+<!--1713278703000-->
+[朔尔兹访问有牛肉成果：中国解禁了](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C-%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86)
 ------
 
-<div>16/04/2024 - 13:22</div><img src="https://s.rfi.fr/media/display/6535cae0-fbe1-11ee-8e3d-005056a97e36/w:1280/p:16x9/Flame%20olympique.JPG"><p><strong>点燃奥运圣火仪式星期二在希腊奥林匹亚的赫拉神庙遗址隆重举行，希腊女祭司把圣火传递给奥运希腊赛艇冠军法国运动员斯特凡诺斯-恩图斯科斯（Stefanos Ntouskos），请看France24报道。        </strong></p><div><p>距离巴黎奥运会还有大约100天，点燃奥运圣火仪式星期二在希腊奥林匹亚的赫拉神庙遗址隆重举行，奥运希腊赛艇冠军法国运动员斯特凡诺斯-恩图斯科斯（Stefanos Ntouskos）首次接受。</p><p>法国运动员斯特凡诺斯-恩图斯科斯是希腊奥运赛艇冠军和室外赛艇金牌得主，他在11月被选中来迎接奥运会圣火 。</p><p>主持仪式的希腊大祭司把圣火交给了斯特凡诺斯-恩图斯科斯，并请他诠释她早些时候激发的来自上帝的和平信息。</p><p>法国奥运冠军斯特凡诺斯-恩图斯科斯高举这支火炬，并且跑几米将火炬传递给奥运游泳冠军法国女选手洛尔·马诺杜，启动奥运圣火巴黎之旅，奥运圣火在5月8日到达马赛。</p><p>女祭司释放一只白鸽子，这只鸽子在古老的奥林匹亚体育场展翅高飞。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWNt.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E8%25A7%2586%25E9%25A2%2591-%25E5%25A5%25A5%25E6%259E%2597%25E5%258C%25B9%25E5%2585%258B%25E5%259C%25A3%25E7%2581%25AB-%25E8%25B5%259B%25E8%2589%2587%25E5%2586%25A0%25E5%2586%259B%25E6%2581%25A9%25E5%259B%25BE%25E6%2596%25AF%25E7%25A7%2591%25E6%2596%25AF%25E9%25A6%2596%25E6%258E%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB%20%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5%20-%20https%3A%2F%2Frfi.my%2FAWNt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB%20%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5%20-%20https%3A%2F%2Frfi.my%2FAWNt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWNt.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB%20%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 15:40</div><img src="https://s.rfi.fr/media/display/74f0a62c-fbea-11ee-b94f-005056bfb2b6/w:1280/p:16x9/GLQX5FyWAAAdFuC.gif"><p><strong>德国总理朔尔茨在访问北京期间敦促中国同行改善市场准入后，中国海关当局周二表示，中国已解除对部分德国牛肉进口的禁令。        </strong></p><div><p> </p><p>中国今天解除部分德国牛肉进口禁令。中国此前以防止疯牛病的理由对德国牛肉实行进口禁令。</p><p>据路透社今天引述​中国海关总署在微信中表示，这一放宽政策适用于从德国进口的30个月以下小牛的去骨牛肉。</p><p>中国官方说，该变更自4月16日（即公告之日）起生效。</p><p>据朔尔茨周二表示，中国还同意对从德国进口的牛肉和苹果开放边境，并为猪肉进口提供便利。</p><p>朔尔茨是在为期三天的中国之行的最后一天发表上述言论的，期间他会见了中国国家主席习近平，并向中国同行施压，要求提供更好的市场准入，并表示德国不想与中国“脱钩”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWPl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E6%259C%2594%25E5%25B0%2594%25E5%2585%25B9%25E8%25AE%25BF%25E9%2597%25AE%25E6%259C%2589%25E7%2589%259B%25E8%2582%2589%25E6%2588%2590%25E6%259E%259C-%25E4%25B8%25AD%25E5%259B%25BD%25E8%25A7%25A3%25E7%25A6%2581%25E4%25BA%2586&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86%20-%20https%3A%2F%2Frfi.my%2FAWPl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86%20-%20https%3A%2F%2Frfi.my%2FAWPl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWPl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
