--- a/articles/rfi/999996.md
+++ b/articles/rfi/999996.md
@@ -1,5 +1,5 @@
-<!--1713267901000-->
-[德中首脑会 法新着重朔尔茨盼对乌的公正和平 官媒强调习近平称互不构成安全威胁 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240416-%E5%BE%B7%E4%B8%AD%E9%A6%96%E8%84%91%E4%BC%9A-%E6%B3%95%E6%96%B0%E7%9D%80%E9%87%8D%E6%9C%94%E5%B0%94%E8%8C%A8%E7%9B%BC%E5%AF%B9%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%85%AC%E6%AD%A3%E5%92%8C%E5%B9%B3-%E5%AE%98%E5%AA%92%E5%BC%BA%E8%B0%83%E4%B9%A0%E8%BF%91%E5%B9%B3%E7%A7%B0%E4%BA%92%E4%B8%8D%E6%9E%84%E6%88%90%E5%AE%89%E5%85%A8%E5%A8%81%E8%83%81)
+<!--1713278702000-->
+[中国烂尾楼新招：或成立公司收购](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E4%B8%AD%E5%9B%BD%E7%83%82%E5%B0%BE%E6%A5%BC%E6%96%B0%E6%8B%9B-%E6%88%96%E6%88%90%E7%AB%8B%E5%85%AC%E5%8F%B8%E6%94%B6%E8%B4%AD)
 ------
 
-<div>16/04/2024 - 13:14</div><img src="https://s.rfi.fr/media/display/db3c9280-fbd4-11ee-b9b2-005056a97e36/w:1280/p:16x9/2024-04-16T092011Z_1344172512_RC2K77AQBNR7_RTRMADP_3_CHINA-GERMANY.JPG"><p><strong>中国国家主席习近平16日与到访的德国总理朔尔茨（Olaf Scholz）会晤。中国媒体报道强调出习近平表示，中徳互不构成安全威胁，并指中国出口产品缓解全球通胀压力。法新社报则着重朔尔茨提及乌俄战争，盼双方对乌克兰公正的和平做出更多贡献。                    </strong></p><div><p>朔尔茨本月14日抵达重庆，开启任内第2次访华。在会晤习近平前，朔尔茨先后访问重庆和上海，期间参观氢动力生产设施，以及德国化工巨头科思创在当地的绿色和可持续技术研发基地。</p><p>据法新社今天16日报道称，德国总理今访北京，朔尔茨面临着一个德国对中国政策平衡的问题。他打算加强德国与德国主要贸易伙伴中国的经济联系，同时代表欧盟希望减少在经济上对这个亚洲巨人的依赖。</p><p>外界注意到，肖尔茨昨天参访上海同济大学时，曾透露他对欧洲进口中国汽车的观点。他认为，欧洲市场对中国汽车应开放且公平，但重要的前提是必须维持公平竞争，即“不倾销，不生产过剩与不侵权”。</p><p style="text-align:start">朔尔茨今天在北京钓鱼台外交大楼与习近平会面，据他的随团官员透露，他要与习近平讨论如何“进一步为乌克兰公正的和平做出贡献”。法新社早些时候报导指，朔尔茨在社群媒体平台X（前推特）上发文表示：“我与习主席的会面还将重点讨论如何为乌克兰公正的和平做出更多贡献。”</p><p style="text-align:start">在乌克兰危机上，中国呼吁对话，反对使用核武器，并敦促尊重“所有国家”的领土完整，该报道解读称这意味着乌克兰也包括在内。但北京从未公开谴责莫斯科入侵乌克兰，中国经常呼吁考虑各方的安全关切，包括俄罗斯对北约的安全关切。</p><p style="text-align:start">按照德国总理办公室提供的对话文件，朔尔茨对习近平说：“俄罗斯对乌克兰的侵略战争和俄罗斯的武装对欧洲安全产生了非常重大的负面影响。” 朔尔兹称“它们直接影响我们的根本利益。” 同时“它们间接损害了整个国际秩序，因为它们违反了《联合国宪章》的一项原则即国家边界不可侵犯的原则。”</p><p style="text-align:start">十多年来，中国和俄罗斯的关系日益密切，因为两国在国际舞台上共同谴责西方霸权。</p><p style="text-align:start">自乌克兰战争爆发以来，中国与俄罗斯两国加强了经济、军事和外交合作。 俄罗斯外交部长拉夫罗夫上周还到访北京。</p><p style="text-align:start">法新社指出，朔尔茨还与习近平讨论了双边合作领域，特别是气候领域。德方表示：“只有共同努力，我们才能找到阻止气候变化的解决方案，并以社会公平的方式管理绿色能源转型。”</p><p>据中国官媒中央电视台报道，习近平认为，为了应对国际社会面临的“日益增长的风险和挑战”，“大国之间的合作”是“不可或缺的”。习近平表示，“中国和德国分别是世界第二和第三大经济体，（......）巩固和发展中德关系的重要性超出双边关系范围，对亚欧大陆乃至全世界产生重要影响。”</p><p>习近平还说，中德之间“没有根本利益冲突，彼此不构成安全威胁”，只要双方坚持相互尊重，求同存异，交流互鉴，合作共赢，中德关系必将继续行稳致远。习近平又表示，要从长远和战略角度，全方位看待和发展双边关系，把握中德全方位战略伙伴共识。</p><p>此外，据中方释出的声明，其中并没有直接提到台海局势。不过，肖尔茨在上海时曾隐约提及安全议题，称“小国不应该生活在对大国的恐惧中”，各方也不应以武力改变边界。他说：“如果我们的邻居是一个高大、健壮、肌肉强壮的人，那我们总是会想打个招呼，确保他不会伤害我们。”上述发言并未点名中国。</p><p>谈及俄乌战争，央视报道习近平认为，要把握几个原则：一要以和平稳定的大局为重，不要谋求一己私利；二要为局势降温，不要拱火浇油；三要为恢复和平积累条件，不要进一步激化矛盾；四要减少对世界经济的负面影响，不要破坏全球产业链供应链稳定。</p><p>今年是中德建立全方位战略伙伴关系10周年，中国外交部发言人此前表示，中方愿同德方以此访为契机，增进理解信任，深化务实合作，秉持相互尊重、平等相待、互利共赢、求同存异的原则，推动中德关系取得更大发展，共同为世界和平与繁荣作出更大贡献。</p><p>在朔尔茨访华之际，德国的许多西方盟友在一系列贸易问题上与中国对抗。欧盟正在对中国太阳能电池板、电动车和风力涡轮机的国家援助进行一系列调查。同时，美国正在调查中国汽车技术带来的国家安全风险。</p><p style="text-align:left">德国政府先前曾表示，预期双方讨论欧盟去年对中国电动车展开反补贴调查、中国产能过剩，以及德国企业在中国市场面对不公平竞争等问题，相信北京会争取德国不要支持欧盟对华电动车征收惩罚性关税。</p><p style="text-align:left">在周二，朔尔茨也将会见中国总理李强，以及会晤德中经济委员会并举行新闻发布会。</p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%A4%8F%E6%A6%95/" title="夏榕">夏榕</a></div></div></div></div>
+<div>16/04/2024 - 16:21</div><img src="https://s.rfi.fr/media/display/3a3b1afa-d8d9-11ee-856e-005056a97e36/w:1280/p:16x9/chine%20contruction%20immobilier%20251113_1-1.png"><p><strong>中国高层传正在考虑建立一个全国性的房地产平台公司，负责收购各地烂尾楼，然后将烂尾楼转变为保障性住房。不过，分析警告这种方案也面临财源等一连串挑战。        </strong></p><div><p>据中央社今天引述财新传媒旗下新媒体“金融我闻”15日消息，日前访问中国的美国财长叶伦（Janet Yellen）6日与中国国务院副总理何立峰会谈结束后，有外媒披露，叶伦说，中国将采取“重大举措”解决房地产问题。</p><p>该披露说，所谓重大举措，除了今年1月初推出的“城市房地产融资协调机制”（俗称房地产“白名单”），也可能包括考虑借鉴日本经验，建立一个全国性的房地产平台公司，负责收购各地烂尾楼。这些购来的房子将被打造为保障性住房（社会住宅），对外出售或出租。</p><p>消息引述金融机构人士说，当前中国的房价仍处于下行通道，房价何时能见底还是未知数；“国家队”此时如果能够下场收购，一定程度上利于稳定房价。</p><p>这名人士并认为，相较于地方政府自行引入政府平台公司或地方国资参与收购，会面临由哪个主管部门定出规则或做出判断、要接收哪些房企的建案等一系列问题，成立全国性平台公司来运作，至少有统一的机构可以直接确定各项事宜。</p><p>不过，也有业内人士表示，这个全国性平台公司一旦成立，并介入收购现有问题建案，将遭遇一连串挑战，比如：钱从哪来、如何制定收购标准、后续如何运营收购来的房源，实务中又该如何把控好各环节中潜藏的道德风险等。</p><p>据该报道，有关由政府“收购”烂尾楼转作保障房的做法，今年以来在中国不乏有经济学者呼应。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQS.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E4%25B8%25AD%25E5%259B%25BD%25E7%2583%2582%25E5%25B0%25BE%25E6%25A5%25BC%25E6%2596%25B0%25E6%258B%259B-%25E6%2588%2596%25E6%2588%2590%25E7%25AB%258B%25E5%2585%25AC%25E5%258F%25B8%25E6%2594%25B6%25E8%25B4%25AD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E7%83%82%E5%B0%BE%E6%A5%BC%E6%96%B0%E6%8B%9B%EF%BC%9A%E6%88%96%E6%88%90%E7%AB%8B%E5%85%AC%E5%8F%B8%E6%94%B6%E8%B4%AD%20-%20https%3A%2F%2Frfi.my%2FAWQS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E7%83%82%E5%B0%BE%E6%A5%BC%E6%96%B0%E6%8B%9B%EF%BC%9A%E6%88%96%E6%88%90%E7%AB%8B%E5%85%AC%E5%8F%B8%E6%94%B6%E8%B4%AD%20-%20https%3A%2F%2Frfi.my%2FAWQS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQS.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E7%83%82%E5%B0%BE%E6%A5%BC%E6%96%B0%E6%8B%9B%EF%BC%9A%E6%88%96%E6%88%90%E7%AB%8B%E5%85%AC%E5%8F%B8%E6%94%B6%E8%B4%AD&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
