--- a/articles/rfi/999997.md
+++ b/articles/rfi/999997.md
@@ -1,5 +1,5 @@
-<!--1713266102000-->
-[围绕俄罗斯核泄露事件的几点疑问？ - 环保天地](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E4%BF%9D%E5%A4%A9%E5%9C%B0/20240416-%E5%9B%B4%E7%BB%95%E4%BF%84%E7%BD%97%E6%96%AF%E6%A0%B8%E6%B3%84%E9%9C%B2%E4%BA%8B%E4%BB%B6%E7%9A%84%E5%87%A0%E7%82%B9%E7%96%91%E9%97%AE)
+<!--1713278702000-->
+[路透社说俄罗斯和中国以废品贸易新铜 以规避纳税和制裁](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E8%B7%AF%E9%80%8F%E7%A4%BE%E8%AF%B4%E4%BF%84%E7%BD%97%E6%96%AF%E5%92%8C%E4%B8%AD%E5%9B%BD%E4%BB%A5%E5%BA%9F%E5%93%81%E8%B4%B8%E6%98%93%E6%96%B0%E9%93%9C-%E4%BB%A5%E8%A7%84%E9%81%BF%E7%BA%B3%E7%A8%8E%E5%92%8C%E5%88%B6%E8%A3%81)
 ------
 
-<div>16/04/2024 - 12:50</div><img src="https://s.rfi.fr/media/display/48cf8a14-fbd5-11ee-ac1e-005056bfb2b6/w:1280/p:16x9/661544825ce5b.jpg"><p><strong>俄罗斯远东城市哈巴罗夫斯克地区4月5日进入紧急状态，原因是当地发现了一个核辐射源，当地监测到的核辐射值超过正常值的1600倍。路透社引述俄罗斯媒体报道了上述消息之后，引发了中国东北临近俄罗斯边界的民众的恐慌。因为，事实上，哈巴罗夫斯克离黑龙江抚远县仅仅68公里，鉴于俄罗斯在切尔诺贝利核事故事件上犯有前科，此一突如其来的核泄露事件自然引发边界地区民众的恐慌。                    </strong></p><div><p>之后，中国驻哈巴罗夫斯克总领事馆在4月9日发布公告说，核泄露事故已经获得解决，事故的起因是一个工业探伤仪上的铯137胶囊包装受损引发核辐射，目前已被转送至专业监管机构，市政府宣布从4月10日开始解除该市实施的局部紧急状态法。</p><p><strong>中国媒体为何集体失声？</strong></p><p>不过，中国网民对此一事件的质疑并未因此而中止，首先中国官媒为何迟迟没有对事件加以报道？事实上，在路透社4月5日报道哈巴罗夫斯克部分地区进入紧急状态之前，早有居住在俄罗斯的华人在网络社交媒体上披露说，核泄露事故从三月底就已经发生，而中国媒体一直到4月8日才陆续就此作出报道。</p><p>莫非是为了避免在俄罗斯外长拉夫罗夫到访北京之前发表负面新闻？就连中国官媒《环球时报》特约评论员胡锡进似乎也对中国媒体的这种反应表示不满，他在微博上说，“遇到这种事情，边境这边的中国当地媒体应该发声，及时跟进报道，越是详细透明，这边的人，还有网友们越不会猜东猜西，个别人想搞舆情也更难。”有黑龙江佳木斯网民在微信上质疑道：“辐射的范围到底有多大，俄方并没有公布，相关地区检测到的核辐射具体数值是多少，也不知道，源头是怎么泄露的，有几个源头，依然是不知道。俄方何以将掠走的土地，也就是跟他国毗邻的边境地区作为核试验基地，堆放核废料，陈旧核设施废弃不处理，这些就更加不明白了。”</p><p><strong>铯</strong><strong>137</strong><strong>胶囊有何用途？</strong></p><p>那么，倘若俄罗斯当地政府公布的消息属实，铯137胶囊与核试验和核废料并没有直接的关联，铯(Cs）是一种呈银色的软金属。铯137是核弹、核武器试验和核反应堆内核裂变的副产品之一，它会释放伽玛射线，因此被常用于校对医治癌症的放射治疗设备，也可以用于校对用来监测放射治疗人员及病人所接受的辐射水平的辐射监测仪器。铯137也用于监测工业产品的重量、厚度和密度以及探测焊接点和金属管道的裂缝。</p><p>近年来，在巴西、澳大利亚、泰国等国家也有发生过铯137胶囊遗失的先例。去年一月底，澳洲一枚装有放射性物质的微型胶囊据报从一处矿场运至储存设施时，在途中自卡车掉落遗失，澳洲消防部门警告民众倘若发现胶囊，不要用手拿取，而应及时通告有关部门。不过，澳大利亚最终居然大海捞针，找回了这枚体积相当于一枚硬币的胶囊。</p><p><strong>铯</strong><strong>137</strong><strong>胶囊辐射对环境及民众健康有何影响？</strong></p><p>铯137对人体的影响取决于其辐射强度、暴露时间和受影响的人体细胞种类等。如果胶囊破损，风险更大，因为铯137是一个非常高辐射的放射源，可能会引起急性放射病症，如恶心，疲倦，呕吐及毛发脱落等。如果受到约1希沃特辐射剂量的直接照射，甚至可以引致死亡。</p><p>去年，澳大利亚全国都在寻找被丢失的铯137胶囊时，澳大利亚放射性科学研究人员就提出了自然界和人类面临的各种风险。悉尼大学医学院医学影像科学教授戴尔-贝利解释说，铯 137 的 "半衰期"约为 30 年，但三十年之后，其辐射度继续超过环境中的天然辐射水平，大约将延迟约300 年"。</p><p>贝利教授说，这种放射性物质 "会发出贝塔射线和伽马射线"。据他说，装有铯 137 的胶囊不能滤除β射线，只能滤除伽马射线。伽马射线只有在近距离和长时间照射的情况下才会造成损害。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div>
+<div>16/04/2024 - 16:04</div><img src="https://s.rfi.fr/media/display/fd84f934-ecf9-11ee-ac05-005056bf30b7/w:1280/p:16x9/2024-03-26T124904Z_2010325684_RC2NT6ALJYU7_RTRMADP_3_RUSSIA-SHOOTING-SECURITY.JPG"><p><strong>三名知情人士告诉路透社，俄罗斯铜生产商 RCC 和中国企业通过以废品贸易的方式避税并规避西方制裁的影响。消息人士称，铜盘条在中国偏远的新疆维吾尔地区被中介机构粉碎，使其难以与废钢区分开来，这使得出口商和进口商都可以从废金属和新金属的关税差异中获利。        </strong></p><div><p>路透社称独家报道：俄罗斯和中国以废品贸易新铜以规避税收和制裁。</p><p>俄罗斯12月份铜杆出口关税为7%，低于废钢10%的关税。进口到中国的铜杆税率为4%，但进口俄罗斯废铜则没有关税。</p><p>在西方制裁下，不存在任何法律障碍阻止中国从俄罗斯公司购买金属。但制造商担心，如果制造商与俄罗斯公司开展业务，他们就会失去客户，包括美国和英国的客户，的出口业务。</p><p>消息人士称，一些中国企业已成立新团队来处理涉俄业务。</p><p>美国的制裁旨在最大限度地减少俄罗斯的出口收入，这也可能意味着处理美元付款的困难，因为国际贸易通常以美元进行。</p><p>中国和俄罗斯数据之间的差异反映了去年 12 月开始的伪装成废金属的新金属销售。对废铜和铜棒的制裁没有区别。</p><p>中国海关数据显示，自去年12月以来，中国从俄罗斯购买的废铜数量显着增加，而路透社从商业数据提供商获得的俄罗斯数据显示，出口到该国最大贸易伙伴的废铜数量可以忽略不计。</p><p>该报道称，在回应路透社关于这一差异的询问时，俄罗斯海关表示：“联邦海关总署暂时不提供外贸数据。”它于 2022 年 4 月俄罗斯入侵乌克兰后不久停止发布贸易数据。从那时起，市场就依赖于商业提供商。</p><p>当被问及与中国公司的铜棒贸易时，受到西方制裁的RCC（即俄罗斯铜业公司）表示，它只向俄罗斯公司供应产品。它没有进一步发表评论。</p><p>中国与俄罗斯接壤的新疆海关没有回复电子邮件询问和电话。</p><p>自2022年2月美国因俄罗斯入侵乌克兰而对其实施制裁后，中国已成为俄罗斯企业寻求出口商品的主要目的地。</p><p>美国和欧盟也因支持俄罗斯在乌克兰的战争而对中国企业实施制裁。</p><p>粉碎新制造的铜线材是伪装看起来与废料非常不同的新材料的有效方法。</p><p>这种新型高纯度铜长而细的棒主要用于制造电力电缆，通常呈盘绕状以便于运输。</p><p>相比之下，废铜是已使用过的电线、管材和管道的混合物。它们被切成谷物大小的碎片，或者像面条包一样卷起来压紧，以便运输。</p><p>消息人士称，由于国际社会谴责镇压维吾尔人，中国限制进入新疆地区，因此粉碎事件没有引起人们的注意。</p><p>除了避税的经济动机外，碎金属更难以识别和追踪，从而更容易出售给中国制造商。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E8%25B7%25AF%25E9%2580%258F%25E7%25A4%25BE%25E8%25AF%25B4%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E5%2592%258C%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BB%25A5%25E5%25BA%259F%25E5%2593%2581%25E8%25B4%25B8%25E6%2598%2593%25E6%2596%25B0%25E9%2593%259C-%25E4%25BB%25A5%25E8%25A7%2584%25E9%2581%25BF%25E7%25BA%25B3%25E7%25A8%258E%25E5%2592%258C%25E5%2588%25B6%25E8%25A3%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%B7%AF%E9%80%8F%E7%A4%BE%E8%AF%B4%E4%BF%84%E7%BD%97%E6%96%AF%E5%92%8C%E4%B8%AD%E5%9B%BD%E4%BB%A5%E5%BA%9F%E5%93%81%E8%B4%B8%E6%98%93%E6%96%B0%E9%93%9C%20%E4%BB%A5%E8%A7%84%E9%81%BF%E7%BA%B3%E7%A8%8E%E5%92%8C%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWQA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%B7%AF%E9%80%8F%E7%A4%BE%E8%AF%B4%E4%BF%84%E7%BD%97%E6%96%AF%E5%92%8C%E4%B8%AD%E5%9B%BD%E4%BB%A5%E5%BA%9F%E5%93%81%E8%B4%B8%E6%98%93%E6%96%B0%E9%93%9C%20%E4%BB%A5%E8%A7%84%E9%81%BF%E7%BA%B3%E7%A8%8E%E5%92%8C%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWQA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%B7%AF%E9%80%8F%E7%A4%BE%E8%AF%B4%E4%BF%84%E7%BD%97%E6%96%AF%E5%92%8C%E4%B8%AD%E5%9B%BD%E4%BB%A5%E5%BA%9F%E5%93%81%E8%B4%B8%E6%98%93%E6%96%B0%E9%93%9C%20%E4%BB%A5%E8%A7%84%E9%81%BF%E7%BA%B3%E7%A8%8E%E5%92%8C%E5%88%B6%E8%A3%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
