--- a/articles/rfi/999999.md
+++ b/articles/rfi/999999.md
@@ -1,5 +1,5 @@
-<!--1713264302000-->
-[视频 中国向尼日尔预付石油贷款  支持其军政权](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E8%A7%86%E9%A2%91-%E4%B8%AD%E5%9B%BD%E5%90%91%E5%B0%BC%E6%97%A5%E5%B0%94%E9%A2%84%E4%BB%98%E7%9F%B3%E6%B2%B9%E8%B4%B7%E6%AC%BE-%E6%94%AF%E6%8C%81%E5%85%B6%E5%86%9B%E6%94%BF%E6%9D%83)
+<!--1713273301000-->
+[菲律宾总统欢迎日本自卫队从明年起参加美菲“肩并肩”等联合军演](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2-%E8%82%A9%E5%B9%B6%E8%82%A9-%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94)
 ------
 
-<div>16/04/2024 - 11:53</div><img src="https://s.rfi.fr/media/display/07c2d740-109f-11ea-8bdc-005056bf7c53/w:1280/p:16x9/chine_afrique2.jpg"><p><strong>尼日尔政府宣布已从中国合作伙伴获得 4 亿美元的 "预付款"，用于即将于 5 月开始的原油销售，中国是仅此法国尼日尔第二大投资国。与中国的石油交易让新上台的尼日尔军政权可以运作，请看法广视频报道。        </strong></p><div><p>尼日尔官方媒体近期报道指出尼日尔政府宣布已从中国合作伙伴获得 4 亿美元的 "预付款"，用于即将于 5 月开始的原油销售。</p><p>法国国际关系研究所（Ifri）的研究员本杰明-奥热（Benjamin Augé）指出这将 "使尼日尔军政府能够在未来几个月内运行其行政机构，也将使贝宁获得税收收入，还将使在尼日尔各行业投资方面占主要地位的中国能够使其投资获利"。</p><p>本台记者塞巴斯蒂安克 杜哈梅尔报道，尼日尔将从中国获得4 亿美元的预付金额， 上周五中国国家石油然气集团公司与尼日尔过渡政府签署了一项协议，将在下个月销售尼日尔的石油 。</p><p>中国政府将向尼亚美提供一笔预付款，尼日尔将在一年内偿还这笔预付款 。</p><p>尼日尔的石油将于下月开始从邻国贝宁的塞梅港出口。</p><p>目前尼日尔则关闭了边境 ，尽管西非国家经济共同体的制裁已经解除 ，但协议显然已经达成。</p><p>法国国际关系研究所研究员本杰明-奥热解释道，可以清楚地看到当经济利益对有关各方都很重要时，无论他们的政治分歧有多大都会想方设法达成一致。</p><p>因此很显然这使得尼日尔军政府能够在接下来的几个月里维持其行政运转，尼日尔非常需要出口石油，同时这也为邻国贝宁带来了税收，并使中国主要在尼日尔各行各业投资的主要参与者有利可图。因此我们有三个参与者都在朝着同一个方向努力。</p><p>另一方面由于尼日尔军政府正式脱离西非国家经济共同体并成立了萨赫勒国家联盟，西非经共体需要找到办法让尼日尔重返谈判，因此石油问题也是吸引尼日尔回到西非经共体的一种方式。</p><p>尼日尔是世界最贫穷的国家之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWMV.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E8%25A7%2586%25E9%25A2%2591-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2590%2591%25E5%25B0%25BC%25E6%2597%25A5%25E5%25B0%2594%25E9%25A2%2584%25E4%25BB%2598%25E7%259F%25B3%25E6%25B2%25B9%25E8%25B4%25B7%25E6%25AC%25BE-%25E6%2594%25AF%25E6%258C%2581%25E5%2585%25B6%25E5%2586%259B%25E6%2594%25BF%25E6%259D%2583&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E4%B8%AD%E5%9B%BD%E5%90%91%E5%B0%BC%E6%97%A5%E5%B0%94%E9%A2%84%E4%BB%98%E7%9F%B3%E6%B2%B9%E8%B4%B7%E6%AC%BE%20%20%E6%94%AF%E6%8C%81%E5%85%B6%E5%86%9B%E6%94%BF%E6%9D%83%20-%20https%3A%2F%2Frfi.my%2FAWMV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E4%B8%AD%E5%9B%BD%E5%90%91%E5%B0%BC%E6%97%A5%E5%B0%94%E9%A2%84%E4%BB%98%E7%9F%B3%E6%B2%B9%E8%B4%B7%E6%AC%BE%20%20%E6%94%AF%E6%8C%81%E5%85%B6%E5%86%9B%E6%94%BF%E6%9D%83%20-%20https%3A%2F%2Frfi.my%2FAWMV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWMV.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E4%B8%AD%E5%9B%BD%E5%90%91%E5%B0%BC%E6%97%A5%E5%B0%94%E9%A2%84%E4%BB%98%E7%9F%B3%E6%B2%B9%E8%B4%B7%E6%AC%BE%20%20%E6%94%AF%E6%8C%81%E5%85%B6%E5%86%9B%E6%94%BF%E6%9D%83&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 15:00</div><img src="https://s.rfi.fr/media/display/9bebb08e-b471-11ee-94ac-005056bf30b7/w:1280/p:16x9/AP24015603830995.jpg"><p><strong>菲律宾总统马科斯4月15日欢迎日本自卫队从明年起正式参加美菲两军实施的“肩并肩”等联合演习，：“我认为日本参加是很好的行动”。        </strong></p><div><p>共同社报道，提到中国，马科斯谴责称，最近菲律宾在南海“遭受了非法的、攻击性的不负责任行为”。他表示对日本自卫队正式参加美菲联合演习“没有异议”，强调日美菲朝着“维护和平稳定与航行自由，彻底遵守国际法”的目标，“能够最大限度地运用所拥有的力量”。</p><p>马科斯11日出席了在美国华盛顿召开的日美菲三国首脑会谈，就设立人道主义援助和应对灾害的三国演习达成共识，发布声明，明年三国演习将加入美菲“肩并肩”等联合演习中。</p><p>在记者会上，马科斯就方便日本自卫队参加联合演习的日菲间的《互惠准入协定》（RAA）透露说，谈判没有争议点，预计很快就能签署。</p><p>“肩并肩”是美菲两军每年举行的最大规模演习。今年将于4月22日至5月10日实施，预计约1.7万名官兵参加。马科斯指出：“计划首次举行网络安全保障与指挥统制训练，将是最复杂、规模最大的演习。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWP1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E8%258F%25B2%25E5%25BE%258B%25E5%25AE%25BE%25E6%2580%25BB%25E7%25BB%259F%25E6%25AC%25A2%25E8%25BF%258E%25E6%2597%25A5%25E6%259C%25AC%25E8%2587%25AA%25E5%258D%25AB%25E9%2598%259F%25E4%25BB%258E%25E6%2598%258E%25E5%25B9%25B4%25E8%25B5%25B7%25E5%258F%2582%25E5%258A%25A0%25E7%25BE%258E%25E8%258F%25B2-%25E8%2582%25A9%25E5%25B9%25B6%25E8%2582%25A9-%25E7%25AD%2589%25E8%2581%2594%25E5%2590%2588%25E5%2586%259B%25E6%25BC%2594&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94%20-%20https%3A%2F%2Frfi.my%2FAWP1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94%20-%20https%3A%2F%2Frfi.my%2FAWP1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWP1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
